--- a/assets/pug/data/general-menu.pug
+++ b/assets/pug/data/general-menu.pug
@@ -12,7 +12,7 @@
 
          },
          {
-            icon:"Home",
+            icon:"Bag",
             title:"Ecommerce Dashboard",
             url:"ecommerce.html",
             subTitle:"Over view of all",
