--- a/assets/pug/pages/template/shop.pug
+++ b/assets/pug/pages/template/shop.pug
@@ -67,10 +67,10 @@ html(lang='en')
                 div.product-filter 
                   +SVG_ICON("Filter", "w-6 h-6 stroke-content3 lg:block hidden shop-toggle")
                 div.product-setting 
-                  a(href="javscript:void(0)" class="grid-layout-view")
+                  a(href="javascript:void(0)" class="grid-layout-view")
                     i(data-feather="grid" class="w-6 h-6 stroke-content3")
                 div.product-setting 
-                  a(href="javscript:void(0)" class="list-layout-view")
+                  a(href="javascript:void(0)" class="list-layout-view")
                     i(data-feather="list" class="w-6 h-6 stroke-content3")
             div.col-span-3(class="2xl:col-span-4 shop-sidebar")
               div.card.sticky.top-0(class="product-filter")
