--- a/assets/pug/pages/template/stack.pug
+++ b/assets/pug/pages/template/stack.pug
@@ -183,11 +183,11 @@ html(lang='en')
                     div(data-tabContent="1" class="tab-pan active show first:rounded-tl-none rounded-5")
                       div.flex.flex-wrap.gap-2.justify-center
                         div.stack.mb-3 
-                          div.stack-item.card.border.border-gray.bg-gray-light.text-title.shawod-none.rounded-2xl.place-content-center(class="!w-40 dark:border-border-dark")
+                          div.stack-item.card.border.border-gray.bg-gray-light.text-title.shadow-none.rounded-2xl.place-content-center(class="!w-40 dark:border-border-dark")
                             div.card-body card-1
-                          div.stack-item.card.border.border-gray.bg-gray-light.text-title.shawod-none.rounded-2xl.place-content-center(class="!w-40 dark:border-border-dark")
+                          div.stack-item.card.border.border-gray.bg-gray-light.text-title.shadow-none.rounded-2xl.place-content-center(class="!w-40 dark:border-border-dark")
                             div.card-body card-2
-                          div.stack-item.card.border.border-gray.bg-gray-light.text-title.shawod-none.rounded-2xl.place-content-center(class="!w-40 dark:border-border-dark")
+                          div.stack-item.card.border.border-gray.bg-gray-light.text-title.shadow-none.rounded-2xl.place-content-center(class="!w-40 dark:border-border-dark")
                             div.card-body card-3
                     div(data-tabContent="2" class="relative tab-pan copyParent group first:rounded-tl-none rounded-5")
                       button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white")  
@@ -196,13 +196,13 @@ html(lang='en')
                         code(class="dark:bg-sidebar-dark2")
                           |&lt;div class="flex flex-wrap justify-center gap-2"&gt;
                           |    &lt;div class="mb-3 stack"&gt;
-                          |        &lt;div class="stack-item card border border-gray bg-gray-light text-title shawod-none rounded-2xl place-content-center !w-40 dark:border-border-dark"&gt;
+                          |        &lt;div class="stack-item card border border-gray bg-gray-light text-title shadow-none rounded-2xl place-content-center !w-40 dark:border-border-dark"&gt;
                           |            &lt;div class="card-body"&gt; card-1 &lt;/div&gt;
                           |        &lt;/div&gt;
-                          |        &lt;div class="stack-item card border border-gray bg-gray-light text-title shawod-none rounded-2xl place-content-center !w-40 dark:border-border-dark"&gt;
+                          |        &lt;div class="stack-item card border border-gray bg-gray-light text-title shadow-none rounded-2xl place-content-center !w-40 dark:border-border-dark"&gt;
                           |            &lt;div class="card-body"&gt; card-2 &lt;/div&gt;
                           |        &lt;/div&gt;
-                          |        &lt;div class="stack-item card border border-gray bg-gray-light text-title shawod-none rounded-2xl place-content-center !w-40 dark:border-border-dark"&gt;
+                          |        &lt;div class="stack-item card border border-gray bg-gray-light text-title shadow-none rounded-2xl place-content-center !w-40 dark:border-border-dark"&gt;
                           |            &lt;div class="card-body"&gt; card-3 &lt;/div&gt;
                           |        &lt;/div&gt;
                           |    &lt;/div&gt; 
@@ -278,15 +278,15 @@ html(lang='en')
                     div(data-tabContent="1" class="tab-pan active show first:rounded-tl-none rounded-5")
                       div.flex.flex-wrap.gap-2.justify-center
                         div.stack.mb-3 
-                          div.stack-item.card.bg-danger.text-white.shawod-none.rounded-2xl(class="!w-auto !h-auto dark:bg-danger dark:border-border-dark")
+                          div.stack-item.card.bg-danger.text-white.shadow-none.rounded-2xl(class="!w-auto !h-auto dark:bg-danger dark:border-border-dark")
                             div.card-body 
                               h3.card-title Latest News
                               p Click here, for more latest update!!
-                          div.stack-item.card.bg-danger.text-white.shawod-none.rounded-2xl(class="!w-auto !h-auto dark:bg-danger dark:border-border-dark")
+                          div.stack-item.card.bg-danger.text-white.shadow-none.rounded-2xl(class="!w-auto !h-auto dark:bg-danger dark:border-border-dark")
                             div.card-body 
                               h3.card-title Latest News
                               p Click here, for more latest update!!
-                          div.stack-item.card.bg-danger.text-white.shawod-none.rounded-2xl(class="!w-auto !h-auto dark:bg-danger dark:border-border-dark")
+                          div.stack-item.card.bg-danger.text-white.shadow-none.rounded-2xl(class="!w-auto !h-auto dark:bg-danger dark:border-border-dark")
                             div.card-body 
                               h3.card-title Latest News
                               p Click here, for more latest update!!
@@ -297,19 +297,19 @@ html(lang='en')
                         code(class="dark:bg-sidebar-dark2")
                           |&lt;div class="flex flex-wrap justify-center gap-2"&gt;
                           |    &lt;div class="mb-3 stack"&gt;
-                          |        &lt;div class="stack-item card bg-danger text-white shawod-none rounded-2xl !w-auto !h-auto dark:bg-sidebar-dark2 dark:border-border-dark"&gt;
+                          |        &lt;div class="stack-item card bg-danger text-white shadow-none rounded-2xl !w-auto !h-auto dark:bg-sidebar-dark2 dark:border-border-dark"&gt;
                           |            &lt;div class="card-body"&gt; 
                           |                &lt;h3 class="card-title"&gt; Latest News &lt;/h3&gt;
                           |                &lt;p&gt; Click here, for more latest update!! &lt;/p&gt;
                           |            &lt;/div&gt;
                           |        &lt;/div&gt;
-                          |        &lt;div class="stack-item card bg-danger text-white shawod-none rounded-2xl !w-auto !h-auto dark:bg-sidebar-dark2 dark:border-border-dark"&gt;
+                          |        &lt;div class="stack-item card bg-danger text-white shadow-none rounded-2xl !w-auto !h-auto dark:bg-sidebar-dark2 dark:border-border-dark"&gt;
                           |            &lt;div class="card-body"&gt; 
                           |                &lt;h3 class="card-title"&gt; Latest News &lt;/h3&gt;
                           |                &lt;p&gt; Click here, for more latest update!! &lt;/p&gt;
                           |            &lt;/div&gt;
                           |        &lt;/div&gt;
-                          |        &lt;div class="stack-item card bg-danger text-white shawod-none rounded-2xl !w-auto !h-auto dark:bg-sidebar-dark2 dark:border-border-dark"&gt;
+                          |        &lt;div class="stack-item card bg-danger text-white shadow-none rounded-2xl !w-auto !h-auto dark:bg-sidebar-dark2 dark:border-border-dark"&gt;
                           |            &lt;div class="card-body"&gt; 
                           |                &lt;h3 class="card-title"&gt; Latest News &lt;/h3&gt;
                           |                &lt;p&gt; Click here, for more latest update!! &lt;/p&gt;
@@ -333,15 +333,15 @@ html(lang='en')
                     div(data-tabContent="1" class="tab-pan active show first:rounded-tl-none rounded-5")
                       div.flex.flex-wrap.gap-2.justify-center
                         div.stack.mb-3 
-                          div.stack-item.card.bg-info.text-white.shawod-none.rounded-2xl(class="!w-auto !h-auto dark:bg-info")
+                          div.stack-item.card.bg-info.text-white.shadow-none.rounded-2xl(class="!w-auto !h-auto dark:bg-info")
                             div.card-body 
                               h3.card-title Notifications
                               p You have 4 unread messages. Tap to see
-                          div.stack-item.card.bg-danger.text-white.shawod-none.rounded-2xl(class="!w-auto !h-auto dark:bg-danger")
+                          div.stack-item.card.bg-danger.text-white.shadow-none.rounded-2xl(class="!w-auto !h-auto dark:bg-danger")
                             div.card-body 
                               h3.card-title Notifications
                               p You have 4 unread messages. Tap to see
-                          div.stack-item.card.bg-warning.text-white.shawod-none.rounded-2xl(class="!w-auto !h-auto dark:bg-warning")
+                          div.stack-item.card.bg-warning.text-white.shadow-none.rounded-2xl(class="!w-auto !h-auto dark:bg-warning")
                             div.card-body 
                               h3.card-title Notifications
                               p You have 4 unread messages. Tap to see
@@ -352,19 +352,19 @@ html(lang='en')
                         code(class="dark:bg-sidebar-dark2")
                           |&lt;div class="flex flex-wrap justify-center gap-2"&gt;
                           |    &lt;div class="mb-3 stack"&gt;
-                          |        &lt;div class="stack-item card bg-info text-white shawod-none rounded-2xl !w-auto !h-auto dark:bg-info"&gt;
+                          |        &lt;div class="stack-item card bg-info text-white shadow-none rounded-2xl !w-auto !h-auto dark:bg-info"&gt;
                           |            &lt;div class="card-body"&gt; 
                           |                &lt;h3 class="card-title"&gt; Notifications &lt;/h3&gt;
                           |                &lt;p&gt; You have 4 unread messages. Tap to see &lt;/p&gt;
                           |            &lt;/div&gt;
                           |        &lt;/div&gt;
-                          |        &lt;div class="stack-item card bg-danger text-white shawod-none rounded-2xl !w-auto !h-auto dark:bg-danger"&gt;
+                          |        &lt;div class="stack-item card bg-danger text-white shadow-none rounded-2xl !w-auto !h-auto dark:bg-danger"&gt;
                           |            &lt;div class="card-body"&gt; 
                           |                &lt;h3 class="card-title"&gt; Notifications &lt;/h3&gt;
                           |                &lt;p&gt; You have 4 unread messages. Tap to see &lt;/p&gt;
                           |            &lt;/div&gt;
                           |        &lt;/div&gt;
-                          |        &lt;div class="stack-item card bg-warning text-white shawod-none rounded-2xl !w-auto !h-auto dark:dark:bg-warning"&gt;
+                          |        &lt;div class="stack-item card bg-warning text-white shadow-none rounded-2xl !w-auto !h-auto dark:dark:bg-warning"&gt;
                           |            &lt;div class="card-body"&gt; 
                           |                &lt;h3 class="card-title"&gt; Notifications &lt;/h3&gt;
                           |                &lt;p&gt; You have 4 unread messages. Tap to see &lt;/p&gt;
