--- a/assets/pug/pages/template/tabs.pug
+++ b/assets/pug/pages/template/tabs.pug
@@ -677,17 +677,20 @@ html(lang='en')
                                       th(class="dark:text-content3") #
                                       th(class="dark:text-content3") Name
                                       th(class="dark:text-content3") Country
+                                      th(class="dark:text-content3") Company Site
                                       th(class="dark:text-content3") Contact No
                                   tbody
                                     tr 
                                       th(class="dark:text-white rtl:text-right") 1
-                                      td(class="dark:text-white") Mrunali
-                                      td(class="dark:text-white") India 
+                                      td(class="dark:text-white") Robert L. Andrews
+                                      td(class="dark:text-white") New zealand
+                                      td(class="dark:text-white") postitquiz.com
                                       td(class="dark:text-white") 5698741236 
                                     tr
-                                      th(class="dark:text-white rtl:text-right rtl:pt-4") 2
-                                      td(class="dark:text-white") Bright
-                                      td(class="dark:text-white") Thailand  
+                                      th(class="dark:text-white rtl:text-right rtl:pt-4 pt-[15px] ") 2
+                                      td(class="dark:text-white") Michelle T. Shepherd
+                                      td(class="dark:text-white") Thailand 
+                                      td(class="dark:text-white") soundcrest.com
                                       td(class="dark:text-white") 7800030320  
                             div(data-tabContent="2" class="tab-pan fade group relative first:rounded-tl-none rounded-5 border-none !px-1 !pb-0")
                               h3.font-bold.text-sm.mb-3(class="dark:text-white") Description:
@@ -697,31 +700,36 @@ html(lang='en')
                                     tr
                                       th(class="dark:text-content3") Technology 
                                       th(class="dark:text-content3") Interest 
+                                      th(class="dark:text-content3") Status
                                       th(class="dark:text-content3") Salary Expected 
                                   tbody
                                     tr
-                                      td(class="dark:text-white ") Web Designer
+                                      td(class="dark:text-white") Web Designer
                                       td(class="dark:text-white") HTML,CSS,JS,SCSS
+                                      td(class="dark:text-warning text-warning") in Progress
                                       td(class="dark:text-white") 45000
                                     tr
                                       td(class="dark:text-white") UX Designer
                                       td(class="dark:text-white") Figma,Photoshop,craft
+                                      td(class="dark:text-success text-success") Success
                                       td(class="dark:text-white") 20000
                             div(data-tabContent="3" class="tab-pan fade group relative first:rounded-tl-none rounded-5 border-none !px-1 !pb-0")
                               h3.font-bold.text-sm.mb-3(class="dark:text-white") Reviews:
                               div.overflow-auto.custom-scroll
                                 table.table.equal-space  
                                   thead
-                                    tr 
+                                    tr  
                                       th(class="dark:text-content3") #
                                       th(class="dark:text-content3") Name
                                       th(class="dark:text-content3") Country
+                                      th(class="dark:text-content3") Company Site
                                       th(class="dark:text-content3 rtl:!text-end") Rating 
                                   tbody
                                     tr 
                                       th(class="dark:text-white rtl:text-right") 1
-                                      td(class="dark:text-white") Mrunali
+                                      td(class="dark:text-white") Robert L. Andrews
                                       td(class="dark:text-white") India
+                                      td(class="dark:text-white") liftcigs.com
                                       td(class="dark:text-white")
                                         div.flex.items-center.justify-end(class="gap-[2px]")
                                           i.fa-solid.fa-star(class="text-warning") 
@@ -729,10 +737,11 @@ html(lang='en')
                                           i.fa-solid.fa-star(class="text-warning")
                                           i.fa-solid.fa-star(class="text-warning")
                                     tr
-                                      th(class="dark:text-white rtl:text-right rtl:pt-4") 3
-                                      td(class="dark:text-white") Bright 
-                                      td(class="dark:text-white") Thailand 
-                                      td
+                                      th(class="dark:text-white rtl:text-right rtl:pt-4 pt-[15px]") 3
+                                      td(class="dark:text-white") Michelle T. Shepherd 
+                                      td(class="dark:text-white") New zealand
+                                      td(class="dark:text-white") wodbig.com
+                                      td 
                                         div.flex.items-center.justify-end(class="gap-[2px]")
                                           i.fa-solid.fa-star(class="text-warning")
                                           i.fa-solid.fa-star(class="text-warning")
@@ -741,7 +750,7 @@ html(lang='en')
                       button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white")   
                         i(data-feather="clipboard")
                       pre(class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2")
-                        code(class="dark:bg-sidebar-dark2") 
+                        code(class="dark:bg-sidebar-dark2")
                           |  &lt;h3 class="mb-3 text-sm font-bold dark:text-white"&gt;User Detail:&lt;/h3&gt;
                           |  &lt;div class="overflow-auto custom-scroll"&gt;&lt;/div&gt;
                           |   &nbsp;&lt;table class="table equal-space"&gt;
@@ -750,19 +759,22 @@ html(lang='en')
                           |          &lt;th class="dark:text-content3"&gt;#&lt;/th&gt;
                           |          &lt;th class="dark:text-content3"&gt;Name&lt;/th&gt;
                           |          &lt;th class="dark:text-content3"&gt;Country&lt;/th&gt;
+                          |          &lt;th class="dark:text-content3"&gt;Company Site&lt;/th&gt;
                           |          &lt;th class="dark:text-content3"&gt;Contact No&lt;/th&gt;
                           |        &lt;/tr&gt;
                           |      &lt;/thead&gt; 
                           |      &lt;tbody&gt;
                           |        &lt;tr&gt; 
                           |          &lt;th class="dark:text-white rtl:text-right"&gt;1&lt;/th&gt;
-                          |            &lt;td class="dark:text-white"&gt;Mrunali&lt;/td&gt;
+                          |            &lt;td class="dark:text-white"&gt; Robert L. Andrews&lt;/td&gt;
+                          |            &lt;td class="dark:text-white"&gt; liftcigs.com&lt;/td&gt;
                           |            &lt;td class="dark:text-white"&gt;India &lt;/td&gt;
                           |            &lt;td class="dark:text-white"&gt;5698741236 &lt;/td&gt;
                           |        &lt;/tr&gt;
                           |        &lt;tr&gt;
                           |          &lt;th class="dark:text-white rtl:text-right rtl:pt-4"&gt;2&lt;/th&gt;
-                          |            &lt;td class="dark:text-white"&gt;Bright&lt;/td&gt;
+                          |            &lt;td class="dark:text-white"&gt;Michelle T. Shepherd&lt;/td&gt;
+                          |            &lt;td class="dark:text-white"&gt;soundcrest.com &lt;/td&gt;
                           |            &lt;td class="dark:text-white"&gt;Thailand &lt;/td&gt;
                           |            &lt;td class="dark:text-white"&gt;7800030320 &lt;/td&gt;
                           |        &lt;/tr&gt;
@@ -775,6 +787,7 @@ html(lang='en')
                           |         &lt;tr&gt;
                           |             &lt;th class="dark:text-content3"&gt;Technology &lt;/th&gt;
                           |             &lt;th class="dark:text-content3"&gt;Interest &lt;/th&gt;
+                          |             &lt;th class="dark:text-content3"&gt;Status &lt;/th&gt;
                           |             &lt;th class="dark:text-content3"&gt;Salary Expected &lt;/th&gt;
                           |         &lt;/tr&gt;
                           |       &lt;/thead&gt;
@@ -782,11 +795,13 @@ html(lang='en')
                           |         &lt;tr&gt;
                           |               &lt;td class="dark:text-white "&gt;Web Designer&lt;/td&gt;
                           |               &lt;td class="dark:text-white"&gt;HTML,CSS,JS,SCSS&lt;/td&gt;
+                          |             &lt;th class="dark:text-warning text-warning"&gt;in Progress &lt;/th&gt;
                           |               &lt;td class="dark:text-white"&gt;45000&lt;/td&gt;
                           |         &lt;/tr&gt;
                           |         &lt;tr&gt;
                           |             &lt;td class="dark:text-white"&gt;UX Designer&lt;/td&gt;
                           |             &lt;td class="dark:text-white"&gt;Figma,Photoshop,craft&lt;/td&gt;
+                          |             &lt;td class="dark:text-success text-success"&gt;Success&lt;/td&gt;
                           |             &lt;td class="dark:text-white"&gt;20000&lt;/td&gt;
                           |         &lt;/tr&gt;
                           |       &lt;/tbody&gt;
@@ -800,14 +815,16 @@ html(lang='en')
                           |             &lt;th class="dark:text-content3"&gt;#&lt;/th&gt;
                           |             &lt;th class="dark:text-content3"&gt;Name&lt;/th&gt;
                           |             &lt;th class="dark:text-content3"&gt;Country&lt;/th&gt;
+                          |             &lt;th class="dark:text-content3"&gt;	Company Site&lt;/th&gt;
                           |             &lt;th class="dark:text-content3 rtl:!text-end"&gt;Rating &lt;/th&gt;
                           |         &lt;/tr&gt;
                           |     &lt;/thead&gt;
                           |     &lt;tbody&gt;
                           |       &lt;tr&gt; 
                           |         &lt;th class="dark:text-white rtl:text-right"&gt;1&lt;/th&gt;
-                          |             &lt;td class="dark:text-white"&gt;Mrunali&lt;/td&gt;
-                          |             &lt;td class="dark:text-white"&gt;India&lt;/td&gt;
+                          |             &lt;td class="dark:text-white"&gt;Robert L. Andrews&lt;/td&gt;
+                          |             &lt;td class="dark:text-white"&gt; New zealand &lt;/td&gt;
+                          |             &lt;td class="dark:text-white"&gt; postitquiz.com &lt;/td&gt;
                           |             &lt;td class="dark:text-white"&gt;
                           |             &lt;div class="flex items-center justify-end gap-[2px]"&gt;
                           |               &lt;i class="fa-solid fa-star text-warning"&gt; &lt;/i&gt;
@@ -819,9 +836,10 @@ html(lang='en')
                           |         &lt;/tr&gt;
                           |       &lt;tr&gt;
                           |       &lt;th class="dark:text-white rtl:text-right rtl:pt-4"&gt;3&lt;/th&gt;
-                          |         &lt;td class="dark:text-white"&gt;Bright &lt;/td&gt;
-                          |         &lt;td class="dark:text-white"&gt;Thailand &lt;/td&gt;
-                          |           &lt;td&gt;
+                          |         &lt;td class="dark:text-white"&gt; Michelle T. Shepherd  &lt;/td&gt;
+                          |         &lt;td class="dark:text-white"&gt;New zealand &lt;/td&gt;
+                          |         &lt;td class="dark:text-white"&gt;wodbig.com &lt;/td&gt;
+                          |           &lt;td&gt; 
                           |             &lt;div class="flex items-center justify-end gap-[2px]"&gt;
                           |               &lt;i class="fa-solid fa-star text-warning"&gt;&lt;/i&gt;
                           |               &lt;i class="fa-solid fa-star text-warning"&gt;&lt;/i&gt;
