--- a/html/template/button.html
+++ b/html/template/button.html
@@ -393,7 +393,7 @@
                     </div>
                     <!-- Language End -->
                   </li>
-                  <li class="cursor-pointer flex- pl-[11px] rtl:pr-[11px] rtl:pl-unset rtl:first:pr-0 first:pl-0 flex items-center">
+                  <li class="cursor-pointer flex- pl-[11px] language-border rtl:first:pr-0 first:pl-0 flex items-center">
                     <!-- Profile Start -->
                     <div class="dropdown"> 
                       <div class="flex items-center gap-[10px] cursor-pointer"> 
@@ -448,7 +448,7 @@
                             <li class="p-2 transition-all duration-300 rounded-5 hover:bg-gray-light dark:hover:bg-sidebar-dark2"><a class="flex items-center gap-2" href="../template/index.html"> 
                                 <div class="p-2 rounded-5  border border-primary">
                                   <svg class="w-5 h-5 stroke-primary"> 
-                                    <use href="../../assets/svg/sprite.svg#../template/Home"> </use>
+                                    <use href="../../assets/svg/sprite.svg#Home"> </use>
                                   </svg>
                                 </div>
                                 <div>
@@ -457,7 +457,7 @@
                             <li class="p-2 transition-all duration-300 rounded-5 hover:bg-gray-light dark:hover:bg-sidebar-dark2"><a class="flex items-center gap-2" href="../template/ecommerce.html"> 
                                 <div class="p-2 rounded-5  border border-primary">
                                   <svg class="w-5 h-5 stroke-primary"> 
-                                    <use href="../../assets/svg/sprite.svg#../template/Home"> </use>
+                                    <use href="../../assets/svg/sprite.svg#Bag"> </use>
                                   </svg>
                                 </div>
                                 <div>
@@ -1216,7 +1216,7 @@
               </div>
             </div>
             <div class="col-span-6 2lg:col-span-12"> 
-              <div class="card tabs">
+              <div class="h-full card tabs">
                 <div class="card-header pb-2 header-bottom-border"> 
                   <div class="flex flex-col">
                     <h3 class="text-lg font-bold">Buttons Shape </h3>
@@ -1227,23 +1227,23 @@
                     </div>
                   </div>
                 </div>
-                <div class="card-body">                                  
+                <div class="card-body"> 
                   <div class="tabs-content">
                     <div class="tab-pan active show first:rounded-tl-none rounded-5" data-tabContent="1">
-                      <div class="flex flex-wrap gap-2 text-white">
-                        <button class="btn btn-warning btn-rounded w-[3.25rem] h-[3.25rem] grid place-content-center !p-0"><i class="w-4 h-4 stroke-white" data-feather="x"></i></button>
-                        <button class="btn btn-outline btn-warning btn-rounded group dark:bg-sidebar-dark w-[3.25rem] h-[3.25rem] grid place-content-center !p-0"><i class="w-4 h-4 stroke-warning group-hover:stroke-white" data-feather="x"></i></button>
-                        <button class="btn btn-success btn-square w-[3.25rem] h-[3.25rem] grid place-content-center !p-0"><i class="w-4 h-4 stroke-white" data-feather="x"></i></button>
-                        <button class="btn btn-outline btn-success btn-square group dark:bg-sidebar-dark w-[3.25rem] h-[3.25rem] grid place-content-center !p-0"><i class="w-4 h-4 stroke-success group-hover:stroke-white" data-feather="x"></i></button>
+                      <div class="flex flex-wrap gap-2 text-white pt-3">
+                        <button class="btn btn-warning btn-rounded w-[2.25rem] h-[2.25rem] grid place-content-center !p-0"><i class="w-4 h-4 stroke-white" data-feather="x"></i></button>
+                        <button class="btn btn-outline btn-warning btn-rounded group dark:bg-sidebar-dark w-[2.25rem] h-[2.25rem] grid place-content-center !p-0"><i class="w-4 h-4 stroke-warning group-hover:stroke-white" data-feather="x"></i></button>
+                        <button class="btn btn-success btn-square w-[2.25rem] h-[2.25rem] grid place-content-center !p-0"><i class="w-4 h-4 stroke-white" data-feather="x"></i></button>
+                        <button class="btn btn-outline btn-success btn-square group dark:bg-sidebar-dark w-[2.25rem] h-[2.25rem] grid place-content-center !p-0"><i class="w-4 h-4 stroke-success group-hover:stroke-white" data-feather="x"></i></button>
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
                       <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark2 dark:hover:text-white"><i data-feather="clipboard"></i></button>
                       <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="flex flex-wrap gap-2"&gt; 
-   &lt;button class="btn btn-warning btn-rounded w-[3.25rem] h-[3.25rem] grid place-content-center !p-0"&gt; &lt;i class="w-4 h-4 stroke-white"&gt; &lt;/i&gt;  &lt;/button&gt; 
-   &lt;button class="btn btn-outline btn-warning btn-rounded w-[3.25rem] h-[3.25rem] grid place-content-center !p-0"&gt; &lt;i class="w-4 h-4 stroke-warning group-hover:stroke-white"&gt; &lt;/i&gt;  &lt;/button&gt;
-   &lt;button class="btn btn-success btn-square w-[3.25rem] h-[3.25rem] grid place-content-center !p-0"&gt; &lt;i class="w-4 h-4 stroke-white"&gt; &lt;/i&gt;  &lt;/button&gt;
-   &lt;button class="btn btn-outline btn-success btn-square w-[3.25rem] h-[3.25rem] grid place-content-center !p-0"&gt; &lt;i class="w-4 h-4 stroke-success group-hover:stroke-white"&gt; &lt;/i&gt;  &lt;/button&gt;
+   &lt;button class="btn btn-warning btn-rounded w-[2.25rem] h-[2.25rem] grid place-content-center !p-0"&gt; &lt;i class="w-4 h-4 stroke-white"&gt; &lt;/i&gt;  &lt;/button&gt; 
+   &lt;button class="btn btn-outline btn-warning btn-rounded w-[2.25rem] h-[2.25rem] grid place-content-center !p-0"&gt; &lt;i class="w-4 h-4 stroke-warning group-hover:stroke-white"&gt; &lt;/i&gt;  &lt;/button&gt;
+   &lt;button class="btn btn-success btn-square w-[2.25rem] h-[2.25rem] grid place-content-center !p-0"&gt; &lt;i class="w-4 h-4 stroke-white"&gt; &lt;/i&gt;  &lt;/button&gt;
+   &lt;button class="btn btn-outline btn-success btn-square w-[2.25rem] h-[2.25rem] grid place-content-center !p-0"&gt; &lt;i class="w-4 h-4 stroke-success group-hover:stroke-white"&gt; &lt;/i&gt;  &lt;/button&gt;
 &lt;/div&gt;</code></pre>
                     </div>
                   </div>
@@ -1297,12 +1297,12 @@
                   <div class="tabs-content">
                     <div class="tab-pan active show first:rounded-tl-none rounded-5" data-tabContent="1">
                       <div class="flex flex-wrap gap-2">
-                        <button class="btn btn-secondary text-white flex justify-center items-center gap-2">
+                        <button class="btn btn-primary text-white flex justify-center items-center gap-2">
                           <svg class="w-[1.125rem] h-[1.125rem] stroke-white"> 
                             <use href="../../assets/svg/sprite.svg#Heart"> </use>
                           </svg> Likes
                         </button>
-                        <button class="btn btn-secondary text-white flex justify-center items-center gap-2">  Wishlist
+                        <button class="btn btn-warning text-white flex justify-center items-center gap-2">  Wishlist
                           <svg class="w-[1.125rem] h-[1.125rem] stroke-white"> 
                             <use href="../../assets/svg/sprite.svg#Heart"> </use>
                           </svg>
@@ -1312,10 +1312,10 @@
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
                       <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark2 dark:hover:text-white"><i data-feather="clipboard"></i></button>
                       <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="flex flex-wrap gap-2"&gt; 
-   &lt;button class="flex items-center justify-center gap-2 text-white btn btn-secondary"&gt;
+   &lt;button class="flex items-center justify-center gap-2 text-white btn btn-primary"&gt;
       +SVG_ICON("Heart","w-[1.125rem] h-[1.125rem] stroke-white")Likes
    &lt;/button&gt; 
-   &lt;button class="flex items-center justify-center gap-2 text-white btn btn-secondary"&gt;
+   &lt;button class="flex items-center justify-center gap-2 text-white btn btn-warning"&gt;
       +SVG_ICON("Heart","w-[1.125rem] h-[1.125rem] stroke-white")Wishlist
    &lt;/button&gt;
 &lt;/div&gt;</code></pre>
