--- a/html/template/knowledgebase.html
+++ b/html/template/knowledgebase.html
@@ -391,7 +391,7 @@
                     </div>
                     <!-- Language End -->
                   </li>
-                  <li class="cursor-pointer flex- pl-[11px] rtl:pr-[11px] rtl:pl-unset rtl:first:pr-0 first:pl-0 flex items-center">
+                  <li class="cursor-pointer flex- pl-[11px] language-border rtl:first:pr-0 first:pl-0 flex items-center">
                     <!-- Profile Start -->
                     <div class="dropdown"> 
                       <div class="flex items-center gap-[10px] cursor-pointer"> 
@@ -446,7 +446,7 @@
                             <li class="p-2 transition-all duration-300 rounded-5 hover:bg-gray-light dark:hover:bg-sidebar-dark2"><a class="flex items-center gap-2" href="../template/index.html"> 
                                 <div class="p-2 rounded-5  border border-primary">
                                   <svg class="w-5 h-5 stroke-primary"> 
-                                    <use href="../../assets/svg/sprite.svg#../template/Home"> </use>
+                                    <use href="../../assets/svg/sprite.svg#Home"> </use>
                                   </svg>
                                 </div>
                                 <div>
@@ -455,7 +455,7 @@
                             <li class="p-2 transition-all duration-300 rounded-5 hover:bg-gray-light dark:hover:bg-sidebar-dark2"><a class="flex items-center gap-2" href="../template/ecommerce.html"> 
                                 <div class="p-2 rounded-5  border border-primary">
                                   <svg class="w-5 h-5 stroke-primary"> 
-                                    <use href="../../assets/svg/sprite.svg#../template/Home"> </use>
+                                    <use href="../../assets/svg/sprite.svg#Bag"> </use>
                                   </svg>
                                 </div>
                                 <div>
@@ -1046,7 +1046,7 @@
                   <div class="divider w-full"> </div>
                   <div class="flex justify-between"> <a class="flex items-center gap-1" href="blog-grid.html">
                       <p class="text-content text-xs">Liked by </p><span class="text-primary text-xs">Yen and 242 Others</span></a>
-                    <div class="avatar-group -space-x-6 2md:hidden sm:flex 2sm:hidden">
+                    <div class="avatar-group -space-x-5 2md:hidden sm:flex 2sm:hidden">
                       <div class="avatar border-white border-2 dark:border-border-dark hover:translate-y-[-5px] hover:ease hover:transition-all transition-all translate-y-0">
                         <div class="w-6 h-6"><img src="../../assets/images/avatar/15.jpg" alt="avatar"></div>
                       </div>
@@ -1081,7 +1081,7 @@
                   <div class="divider w-full"></div>
                   <div class="flex justify-between"><a class="flex items-center gap-1" href="blog-grid.html">
                       <p class="text-content text-xs">Liked by  </p><span class="text-primary text-xs">Wilt and 126 Others  </span></a>
-                    <div class="avatar-group -space-x-6 2md:hidden sm:flex 2sm:hidden">
+                    <div class="avatar-group -space-x-5 2md:hidden sm:flex 2sm:hidden">
                       <div class="avatar border-white border-2 dark:border-border-dark hover:translate-y-[-5px] hover:ease hover:transition-all transition-all translate-y-0">
                         <div class="w-6 h-6"><img src="../../assets/images/avatar/15.jpg" alt="avatar"></div>
                       </div>
@@ -1116,7 +1116,7 @@
                   <div class="divider w-full"></div>
                   <div class="flex justify-between"><a class="flex items-center gap-1" href="blog-grid.html">
                       <p class="text-content text-xs">Liked by  </p><span class="text-primary text-xs">Bran and 186 Others  </span></a>
-                    <div class="avatar-group -space-x-6 2md:hidden sm:flex 2sm:hidden">
+                    <div class="avatar-group -space-x-5 2md:hidden sm:flex 2sm:hidden">
                       <div class="avatar border-white border-2 dark:border-border-dark hover:translate-y-[-5px] hover:ease hover:transition-all transition-all translate-y-0">
                         <div class="w-6 h-6"><img src="../../assets/images/avatar/22.jpg" alt="avatar"></div>
                       </div>
@@ -1151,7 +1151,7 @@
                   <div class="divider w-full"></div>
                   <div class="flex justify-between"><a class="flex items-center gap-1" href="blog-grid.html">
                       <p class="text-content text-xs">Liked by  </p><span class="text-primary text-xs">Dou and 96 Others  </span></a>
-                    <div class="avatar-group -space-x-6 2md:hidden sm:flex 2sm:hidden">
+                    <div class="avatar-group -space-x-5 2md:hidden sm:flex 2sm:hidden">
                       <div class="avatar border-white border-2 dark:border-border-dark hover:translate-y-[-5px] hover:ease hover:transition-all transition-all translate-y-0">
                         <div class="w-6 h-6"><img src="../../assets/images/avatar/15.jpg" alt="avatar"></div>
                       </div>
@@ -1186,7 +1186,7 @@
                   <div class="divider w-full"></div>
                   <div class="flex justify-between"><a class="flex items-center gap-1" href="blog-grid.html">
                       <p class="text-content text-xs">Liked by  </p><span class="text-primary text-xs">Bets and 154 Others </span></a>
-                    <div class="avatar-group -space-x-6 2md:hidden sm:flex 2sm:hidden">
+                    <div class="avatar-group -space-x-5 2md:hidden sm:flex 2sm:hidden">
                       <div class="avatar border-white border-2 dark:border-border-dark hover:translate-y-[-5px] hover:ease hover:transition-all transition-all translate-y-0">
                         <div class="w-6 h-6"><img src="../../assets/images/avatar/1.jpg" alt="avatar"></div>
                       </div>
@@ -1221,7 +1221,7 @@
                   <div class="divider w-full"></div>
                   <div class="flex justify-between"><a class="flex items-center gap-1" href="blog-grid.html">
                       <p class="text-content text-xs">Liked by  </p><span class="text-primary text-xs">Robed and 198 Others </span></a>
-                    <div class="avatar-group -space-x-6 2md:hidden sm:flex 2sm:hidden">
+                    <div class="avatar-group -space-x-5 2md:hidden sm:flex 2sm:hidden">
                       <div class="avatar border-white border-2 dark:border-border-dark hover:translate-y-[-5px] hover:ease hover:transition-all transition-all translate-y-0">
                         <div class="w-6 h-6"><img src="../../assets/images/avatar/5.jpg" alt="avatar"></div>
                       </div>
@@ -1256,7 +1256,7 @@
                   <div class="divider w-full"></div>
                   <div class="flex justify-between"><a class="flex items-center gap-1" href="blog-grid.html">
                       <p class="text-content text-xs">Liked by  </p><span class="text-primary text-xs">Virga and 126 Others </span></a>
-                    <div class="avatar-group -space-x-6 2md:hidden sm:flex 2sm:hidden">
+                    <div class="avatar-group -space-x-5 2md:hidden sm:flex 2sm:hidden">
                       <div class="avatar border-white border-2 dark:border-border-dark hover:translate-y-[-5px] hover:ease hover:transition-all transition-all translate-y-0">
                         <div class="w-6 h-6"><img src="../../assets/images/avatar/11.jpg" alt="avatar"></div>
                       </div>
@@ -1291,7 +1291,7 @@
                   <div class="divider w-full"></div>
                   <div class="flex justify-between"><a class="flex items-center gap-1" href="blog-grid.html">
                       <p class="text-content text-xs">Liked by </p><span class="text-primary text-xs">Brent and 126 Others </span></a>
-                    <div class="avatar-group -space-x-6 2md:hidden sm:flex 2sm:hidden">
+                    <div class="avatar-group -space-x-5 2md:hidden sm:flex 2sm:hidden">
                       <div class="avatar border-white border-2 dark:border-border-dark hover:translate-y-[-5px] hover:ease hover:transition-all transition-all translate-y-0">
                         <div class="w-6 h-6"><img src="../../assets/images/avatar/10.jpg" alt="avatar"></div>
                       </div>
