--- a/html/template/modal.html
+++ b/html/template/modal.html
@@ -393,7 +393,7 @@
                     </div>
                     <!-- Language End -->
                   </li>
-                  <li class="cursor-pointer flex- pl-[11px] rtl:pr-[11px] rtl:pl-unset rtl:first:pr-0 first:pl-0 flex items-center">
+                  <li class="cursor-pointer flex- pl-[11px] language-border rtl:first:pr-0 first:pl-0 flex items-center">
                     <!-- Profile Start -->
                     <div class="dropdown"> 
                       <div class="flex items-center gap-[10px] cursor-pointer"> 
@@ -448,7 +448,7 @@
                             <li class="p-2 transition-all duration-300 rounded-5 hover:bg-gray-light dark:hover:bg-sidebar-dark2"><a class="flex items-center gap-2" href="../template/index.html"> 
                                 <div class="p-2 rounded-5  border border-primary">
                                   <svg class="w-5 h-5 stroke-primary"> 
-                                    <use href="../../assets/svg/sprite.svg#../template/Home"> </use>
+                                    <use href="../../assets/svg/sprite.svg#Home"> </use>
                                   </svg>
                                 </div>
                                 <div>
@@ -457,7 +457,7 @@
                             <li class="p-2 transition-all duration-300 rounded-5 hover:bg-gray-light dark:hover:bg-sidebar-dark2"><a class="flex items-center gap-2" href="../template/ecommerce.html"> 
                                 <div class="p-2 rounded-5  border border-primary">
                                   <svg class="w-5 h-5 stroke-primary"> 
-                                    <use href="../../assets/svg/sprite.svg#../template/Home"> </use>
+                                    <use href="../../assets/svg/sprite.svg#Bag"> </use>
                                   </svg>
                                 </div>
                                 <div>
@@ -1201,18 +1201,18 @@
                   <div class="tabs-content">
                     <div class="tab-pan active show first:rounded-tl-none rounded-5" data-tabContent="1">
                       <div class="flex flex-wrap gap-2">
-                        <label class="button-label btn-primary" for="modal-10">Top Left Modal</label>
+                        <label class="button-label btn-secondary" for="modal-10">Top Left Modal</label>
                         <label class="button-label btn-warning" for="modal-11">Top Center Modal</label>
-                        <label class="button-label btn-secondary" for="modal-14">Top Right Modal</label>
+                        <label class="button-label btn-success" for="modal-14">Top Right Modal</label>
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-6" data-tabContent="2">
                       <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white"> <i data-feather="clipboard"> </i></button>
                       <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;!-- The button to open modal --&gt;
    &lt;div class="flex flex-col flex-wrap gap-2"&gt;
-       &lt;label class="button-label btn-primary" for="modal-10"&gt;Top Left Modal&lt;/label&gt;
+       &lt;label class="button-label btn-secondary" for="modal-10"&gt;Top Left Modal&lt;/label&gt;
        &lt;label class="button-label btn-warning" for="modal-11"&gt;Top Center Modal&lt;/label&gt;
-       &lt;label class="button-label btn-warning" for="modal-14"&gt;Top Right Modal&lt;/label&gt;
+       &lt;label class="button-label btn-success" for="modal-14"&gt;Top Right Modal&lt;/label&gt;
    &lt;/div&gt;                        
 
 &lt;!-- Put this part before &lt;/body&gt; tag for top left position modal --&gt;
@@ -1306,7 +1306,7 @@
                       <div class="flex flex-wrap gap-2">
                         <label class="button-label btn-info" for="modal-12">Bottom Left Modal</label>
                         <label class="button-label btn-success" for="modal-13">Bottom Center Modal</label>
-                        <label class="button-label btn-danger" for="modal-15">Bottom Right Modal</label>
+                        <label class="button-label btn-warning" for="modal-15">Bottom Right Modal</label>
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-6" data-tabContent="2">
@@ -1386,14 +1386,14 @@
                   <div class="tabs-content">
                     <div class="tab-pan active show first:rounded-tl-none rounded-5" data-tabContent="1">
                       <div class="flex flex-wrap gap-2">
-                        <label class="button-label btn-primary" for="modal-6">Centered Modal</label>
+                        <label class="button-label btn-success" for="modal-6">Centered Modal</label>
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-6" data-tabContent="2">
                       <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white"> <i data-feather="clipboard"></i></button>
                       <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;!-- The button to open modal --&gt;
     &lt;div class="flex flex-col flex-wrap gap-2"&gt;
-        &lt;label class="button-label btn-primary" for="modal-6"&gt;Centered Modal&lt;/label&gt;
+        &lt;label class="button-label btn-success" for="modal-6"&gt;Centered Modal&lt;/label&gt;
     &lt;/div&gt;                        
 
 &lt;!-- Put this part before &lt;/body&gt; tag for centered modal --&gt;
@@ -1432,14 +1432,14 @@
                   <div class="tabs-content">
                     <div class="tab-pan active show first:rounded-tl-none rounded-5" data-tabContent="1">
                       <div class="flex flex-col flex-wrap gap-2">
-                        <label class="button-label btn-danger" for="modal-5">Footer Modal</label>
+                        <label class="button-label btn-secondary" for="modal-5">Footer Modal</label>
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
                       <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white"> <i data-feather="clipboard"></i></button>
                       <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;!-- The button to open modal --&gt;
    &lt;div class="flex flex-col flex-wrap gap-2"&gt;
-       &lt;label class="button-label btn-danger" for="modal-5"&gt;Footer Modal&lt;/label&gt;
+       &lt;label class="button-label btn-secondary" for="modal-5"&gt;Footer Modal&lt;/label&gt;
    &lt;/div&gt;
 
 &lt;!-- Put this part before &lt;/body&gt; tag for footer modal--&gt;
@@ -1615,14 +1615,14 @@
                   <div class="tabs-content">
                     <div class="tab-pan active show first:rounded-tl-none rounded-5" data-tabContent="1">
                       <div class="flex flex-wrap gap-2">
-                        <label class="button-label btn-danger" for="modal-9">Tooltip & Popover</label>
+                        <label class="button-label btn-success" for="modal-9">Tooltip & Popover</label>
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
                       <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white"> <i data-feather="clipboard"></i></button>
                       <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;!-- The button to open modal for tooltips & popover modal--&gt;
   &lt;div class="flex flex-col flex-wrap gap-2"&gt;
-     &lt;label class="button-label btn-danger" for="modal-9"&gt;Modal&lt;/label&gt;
+     &lt;label class="button-label btn-success" for="modal-9"&gt;Modal&lt;/label&gt;
   &lt;/div&gt;
 
 &lt;!-- Put this part before &lt;/body&gt; tag --&gt;
@@ -1637,7 +1637,7 @@
           &lt;div class="modal-body"&gt;
               &lt;p&gt;Content for the modal&lt;/p&gt;
           &lt;/div&gt;
-      &lt;/div&gt;
+      &lt;/div&gt; 
   &lt;/div&gt;</code></pre>
                     </div>
                   </div>
@@ -1721,7 +1721,7 @@
           </div>
           <div class="modal-body text-center">
             <p class="text-lg font-bold">Up to <span class="text-xl text-secondary">85% OFF</span> , Hurry Up Online Shopping</p>
-            <div class="modal-img"><img class="w-52" src="../../assets/images/modal/online-shopping.gif" alt="shopping"></div>
+            <div class="modal-img"><img class="w-40" src="../../assets/images/modal/online-shopping.gif" alt="shopping"></div>
             <label class="bg-primary text-white py-1 px-2 rounded text-end inline-block" for="modal-1"><a href="shop.html">Explore More</a></label>
           </div>
         </div>
@@ -1822,7 +1822,7 @@
           </div>
           <div class="modal-body">
             <p>This website uses cookies to ensure you get the best experience on our website.</p>
-            <div class="modal-img"><img class="w-52" src="../../assets/images/modal/cookies-sendcookie.gif" alt="whatsapp"></div>
+            <div class="modal-img"> <img class="w-40" src="../../assets/images/modal/cookies-sendcookie.gif" alt="Cookies"></div>
           </div>
           <div class="modal-footer">
             <label class="btn btn-primary p-2 text-white inline-block" for="modal-5">Accept</label>
@@ -1926,12 +1926,12 @@
         <label class="modal-overlay peer-checked:block" for="modal-9"></label>
         <div class="modal w-[18.75rem] peer-checked:opacity-100 peer-checked:visible dark:bg-sidebar-dark2">
           <div class="modal-header">
-            <h3>Modal Title</h3>
-            <label for="modal-9"> <i class="w-4 h-4 stroke-dark" data-feather="x"></i></label>
+            <h3>Tooltip and popover modal</h3>
+            <label for="modal-9"><i class="w-4 h-4 stroke-dark" data-feather="x"></i></label>
           </div>
           <div class="modal-body">
             <p class="leading-">Here, you can see that inside the
-              <label class="button-label btn-secondary text-sm py-1 px-2" data-tw-tooltip="Tooltip">popover</label>  modal, you can set the tooltip.
+              <label class="button-label btn-secondary text-sm py-1 px-2" data-tw-tooltip="Tooltip">popover</label>  modal, <a class="font-semibold text-secondary" href="javascript:void(0)" data-tw-tooltip="link">This link  </a> and that link have tooltips on hover.
             </p>
           </div>
         </div>
