--- a/html/template/shop.html
+++ b/html/template/shop.html
@@ -393,7 +393,7 @@
                     </div>
                     <!-- Language End -->
                   </li>
-                  <li class="cursor-pointer flex- pl-[11px] rtl:pr-[11px] rtl:pl-unset rtl:first:pr-0 first:pl-0 flex items-center">
+                  <li class="cursor-pointer flex- pl-[11px] language-border rtl:first:pr-0 first:pl-0 flex items-center">
                     <!-- Profile Start -->
                     <div class="dropdown"> 
                       <div class="flex items-center gap-[10px] cursor-pointer"> 
@@ -448,7 +448,7 @@
                             <li class="p-2 transition-all duration-300 rounded-5 hover:bg-gray-light dark:hover:bg-sidebar-dark2"><a class="flex items-center gap-2" href="../template/index.html"> 
                                 <div class="p-2 rounded-5  border border-primary">
                                   <svg class="w-5 h-5 stroke-primary"> 
-                                    <use href="../../assets/svg/sprite.svg#../template/Home"> </use>
+                                    <use href="../../assets/svg/sprite.svg#Home"> </use>
                                   </svg>
                                 </div>
                                 <div>
@@ -457,7 +457,7 @@
                             <li class="p-2 transition-all duration-300 rounded-5 hover:bg-gray-light dark:hover:bg-sidebar-dark2"><a class="flex items-center gap-2" href="../template/ecommerce.html"> 
                                 <div class="p-2 rounded-5  border border-primary">
                                   <svg class="w-5 h-5 stroke-primary"> 
-                                    <use href="../../assets/svg/sprite.svg#../template/Home"> </use>
+                                    <use href="../../assets/svg/sprite.svg#Bag"> </use>
                                   </svg>
                                 </div>
                                 <div>
@@ -1049,8 +1049,8 @@
                     <use href="../../assets/svg/sprite.svg#Filter"> </use>
                   </svg>
                 </div>
-                <div class="product-setting"> <a class="grid-layout-view" href="javscript:void(0)"><i class="w-6 h-6 stroke-content3" data-feather="grid"></i></a></div>
-                <div class="product-setting"> <a class="list-layout-view" href="javscript:void(0)"><i class="w-6 h-6 stroke-content3" data-feather="list"></i></a></div>
+                <div class="product-setting"> <a class="grid-layout-view" href="javascript:void(0)"><i class="w-6 h-6 stroke-content3" data-feather="grid"></i></a></div>
+                <div class="product-setting"> <a class="list-layout-view" href="javascript:void(0)"><i class="w-6 h-6 stroke-content3" data-feather="list"></i></a></div>
               </div>
             </div>
             <div class="col-span-3 2xl:col-span-4 shop-sidebar">
