--- a/html/template/tabs.html
+++ b/html/template/tabs.html
@@ -395,7 +395,7 @@
                     </div>
                     <!-- Language End -->
                   </li>
-                  <li class="cursor-pointer flex- pl-[11px] rtl:pr-[11px] rtl:pl-unset rtl:first:pr-0 first:pl-0 flex items-center">
+                  <li class="cursor-pointer flex- pl-[11px] language-border rtl:first:pr-0 first:pl-0 flex items-center">
                     <!-- Profile Start -->
                     <div class="dropdown"> 
                       <div class="flex items-center gap-[10px] cursor-pointer"> 
@@ -450,7 +450,7 @@
                             <li class="p-2 transition-all duration-300 rounded-5 hover:bg-gray-light dark:hover:bg-sidebar-dark2"><a class="flex items-center gap-2" href="../template/index.html"> 
                                 <div class="p-2 rounded-5  border border-primary">
                                   <svg class="w-5 h-5 stroke-primary"> 
-                                    <use href="../../assets/svg/sprite.svg#../template/Home"> </use>
+                                    <use href="../../assets/svg/sprite.svg#Home"> </use>
                                   </svg>
                                 </div>
                                 <div>
@@ -459,7 +459,7 @@
                             <li class="p-2 transition-all duration-300 rounded-5 hover:bg-gray-light dark:hover:bg-sidebar-dark2"><a class="flex items-center gap-2" href="../template/ecommerce.html"> 
                                 <div class="p-2 rounded-5  border border-primary">
                                   <svg class="w-5 h-5 stroke-primary"> 
-                                    <use href="../../assets/svg/sprite.svg#../template/Home"> </use>
+                                    <use href="../../assets/svg/sprite.svg#Bag"> </use>
                                   </svg>
                                 </div>
                                 <div>
@@ -1738,20 +1738,23 @@
                                       <th class="dark:text-content3">#</th>
                                       <th class="dark:text-content3">Name</th>
                                       <th class="dark:text-content3">Country</th>
+                                      <th class="dark:text-content3">Company Site</th>
                                       <th class="dark:text-content3">Contact No</th>
                                     </tr>
                                   </thead>
                                   <tbody>
                                     <tr> 
                                       <th class="dark:text-white rtl:text-right">1</th>
-                                      <td class="dark:text-white">Mrunali</td>
-                                      <td class="dark:text-white">India </td>
+                                      <td class="dark:text-white">Robert L. Andrews</td>
+                                      <td class="dark:text-white">New zealand</td>
+                                      <td class="dark:text-white">postitquiz.com</td>
                                       <td class="dark:text-white">5698741236 </td>
                                     </tr>
                                     <tr>
-                                      <th class="dark:text-white rtl:text-right rtl:pt-4">2</th>
-                                      <td class="dark:text-white">Bright</td>
-                                      <td class="dark:text-white">Thailand  </td>
+                                      <th class="dark:text-white rtl:text-right rtl:pt-4 pt-[15px] ">2</th>
+                                      <td class="dark:text-white">Michelle T. Shepherd</td>
+                                      <td class="dark:text-white">Thailand </td>
+                                      <td class="dark:text-white">soundcrest.com</td>
                                       <td class="dark:text-white">7800030320  </td>
                                     </tr>
                                   </tbody>
@@ -1766,18 +1769,21 @@
                                     <tr>
                                       <th class="dark:text-content3">Technology </th>
                                       <th class="dark:text-content3">Interest </th>
+                                      <th class="dark:text-content3">Status</th>
                                       <th class="dark:text-content3">Salary Expected </th>
                                     </tr>
                                   </thead>
                                   <tbody>
                                     <tr>
-                                      <td class="dark:text-white ">Web Designer</td>
+                                      <td class="dark:text-white">Web Designer</td>
                                       <td class="dark:text-white">HTML,CSS,JS,SCSS</td>
+                                      <td class="dark:text-warning text-warning">in Progress</td>
                                       <td class="dark:text-white">45000</td>
                                     </tr>
                                     <tr>
                                       <td class="dark:text-white">UX Designer</td>
                                       <td class="dark:text-white">Figma,Photoshop,craft</td>
+                                      <td class="dark:text-success text-success">Success</td>
                                       <td class="dark:text-white">20000</td>
                                     </tr>
                                   </tbody>
@@ -1793,23 +1799,26 @@
                                       <th class="dark:text-content3">#</th>
                                       <th class="dark:text-content3">Name</th>
                                       <th class="dark:text-content3">Country</th>
+                                      <th class="dark:text-content3">Company Site</th>
                                       <th class="dark:text-content3 rtl:!text-end">Rating </th>
                                     </tr>
                                   </thead>
                                   <tbody>
                                     <tr> 
                                       <th class="dark:text-white rtl:text-right">1</th>
-                                      <td class="dark:text-white">Mrunali</td>
+                                      <td class="dark:text-white">Robert L. Andrews</td>
                                       <td class="dark:text-white">India</td>
+                                      <td class="dark:text-white">liftcigs.com</td>
                                       <td class="dark:text-white">
                                         <div class="flex items-center justify-end gap-[2px]"><i class="fa-solid fa-star text-warning"> </i><i class="fa-solid fa-star text-warning"></i><i class="fa-solid fa-star text-warning"></i><i class="fa-solid fa-star text-warning"></i></div>
                                       </td>
                                     </tr>
                                     <tr>
-                                      <th class="dark:text-white rtl:text-right rtl:pt-4">3</th>
-                                      <td class="dark:text-white">Bright </td>
-                                      <td class="dark:text-white">Thailand </td>
-                                      <td>
+                                      <th class="dark:text-white rtl:text-right rtl:pt-4 pt-[15px]">3</th>
+                                      <td class="dark:text-white">Michelle T. Shepherd </td>
+                                      <td class="dark:text-white">New zealand</td>
+                                      <td class="dark:text-white">wodbig.com</td>
+                                      <td> 
                                         <div class="flex items-center justify-end gap-[2px]"><i class="fa-solid fa-star text-warning"></i><i class="fa-solid fa-star text-warning"></i><i class="fa-solid fa-star text-warning"></i></div>
                                       </td>
                                     </tr>
@@ -1823,7 +1832,7 @@
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
                       <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white">  <i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">  &lt;h3 class="mb-3 text-sm font-bold dark:text-white"&gt;User Detail:&lt;/h3&gt;
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2"> &lt;h3 class="mb-3 text-sm font-bold dark:text-white"&gt;User Detail:&lt;/h3&gt;
  &lt;div class="overflow-auto custom-scroll"&gt;&lt;/div&gt;
   &nbsp;&lt;table class="table equal-space"&gt;
      &lt;thead&gt;
@@ -1831,19 +1840,22 @@
          &lt;th class="dark:text-content3"&gt;#&lt;/th&gt;
          &lt;th class="dark:text-content3"&gt;Name&lt;/th&gt;
          &lt;th class="dark:text-content3"&gt;Country&lt;/th&gt;
+         &lt;th class="dark:text-content3"&gt;Company Site&lt;/th&gt;
          &lt;th class="dark:text-content3"&gt;Contact No&lt;/th&gt;
        &lt;/tr&gt;
      &lt;/thead&gt; 
      &lt;tbody&gt;
        &lt;tr&gt; 
          &lt;th class="dark:text-white rtl:text-right"&gt;1&lt;/th&gt;
-           &lt;td class="dark:text-white"&gt;Mrunali&lt;/td&gt;
+           &lt;td class="dark:text-white"&gt; Robert L. Andrews&lt;/td&gt;
+           &lt;td class="dark:text-white"&gt; liftcigs.com&lt;/td&gt;
            &lt;td class="dark:text-white"&gt;India &lt;/td&gt;
            &lt;td class="dark:text-white"&gt;5698741236 &lt;/td&gt;
        &lt;/tr&gt;
        &lt;tr&gt;
          &lt;th class="dark:text-white rtl:text-right rtl:pt-4"&gt;2&lt;/th&gt;
-           &lt;td class="dark:text-white"&gt;Bright&lt;/td&gt;
+           &lt;td class="dark:text-white"&gt;Michelle T. Shepherd&lt;/td&gt;
+           &lt;td class="dark:text-white"&gt;soundcrest.com &lt;/td&gt;
            &lt;td class="dark:text-white"&gt;Thailand &lt;/td&gt;
            &lt;td class="dark:text-white"&gt;7800030320 &lt;/td&gt;
        &lt;/tr&gt;
@@ -1856,6 +1868,7 @@
         &lt;tr&gt;
             &lt;th class="dark:text-content3"&gt;Technology &lt;/th&gt;
             &lt;th class="dark:text-content3"&gt;Interest &lt;/th&gt;
+            &lt;th class="dark:text-content3"&gt;Status &lt;/th&gt;
             &lt;th class="dark:text-content3"&gt;Salary Expected &lt;/th&gt;
         &lt;/tr&gt;
       &lt;/thead&gt;
@@ -1863,11 +1876,13 @@
         &lt;tr&gt;
               &lt;td class="dark:text-white "&gt;Web Designer&lt;/td&gt;
               &lt;td class="dark:text-white"&gt;HTML,CSS,JS,SCSS&lt;/td&gt;
+            &lt;th class="dark:text-warning text-warning"&gt;in Progress &lt;/th&gt;
               &lt;td class="dark:text-white"&gt;45000&lt;/td&gt;
         &lt;/tr&gt;
         &lt;tr&gt;
             &lt;td class="dark:text-white"&gt;UX Designer&lt;/td&gt;
             &lt;td class="dark:text-white"&gt;Figma,Photoshop,craft&lt;/td&gt;
+            &lt;td class="dark:text-success text-success"&gt;Success&lt;/td&gt;
             &lt;td class="dark:text-white"&gt;20000&lt;/td&gt;
         &lt;/tr&gt;
       &lt;/tbody&gt;
@@ -1881,14 +1896,16 @@
             &lt;th class="dark:text-content3"&gt;#&lt;/th&gt;
             &lt;th class="dark:text-content3"&gt;Name&lt;/th&gt;
             &lt;th class="dark:text-content3"&gt;Country&lt;/th&gt;
+            &lt;th class="dark:text-content3"&gt;	Company Site&lt;/th&gt;
             &lt;th class="dark:text-content3 rtl:!text-end"&gt;Rating &lt;/th&gt;
         &lt;/tr&gt;
     &lt;/thead&gt;
     &lt;tbody&gt;
       &lt;tr&gt; 
         &lt;th class="dark:text-white rtl:text-right"&gt;1&lt;/th&gt;
-            &lt;td class="dark:text-white"&gt;Mrunali&lt;/td&gt;
-            &lt;td class="dark:text-white"&gt;India&lt;/td&gt;
+            &lt;td class="dark:text-white"&gt;Robert L. Andrews&lt;/td&gt;
+            &lt;td class="dark:text-white"&gt; New zealand &lt;/td&gt;
+            &lt;td class="dark:text-white"&gt; postitquiz.com &lt;/td&gt;
             &lt;td class="dark:text-white"&gt;
             &lt;div class="flex items-center justify-end gap-[2px]"&gt;
               &lt;i class="fa-solid fa-star text-warning"&gt; &lt;/i&gt;
@@ -1900,9 +1917,10 @@
         &lt;/tr&gt;
       &lt;tr&gt;
       &lt;th class="dark:text-white rtl:text-right rtl:pt-4"&gt;3&lt;/th&gt;
-        &lt;td class="dark:text-white"&gt;Bright &lt;/td&gt;
-        &lt;td class="dark:text-white"&gt;Thailand &lt;/td&gt;
-          &lt;td&gt;
+        &lt;td class="dark:text-white"&gt; Michelle T. Shepherd  &lt;/td&gt;
+        &lt;td class="dark:text-white"&gt;New zealand &lt;/td&gt;
+        &lt;td class="dark:text-white"&gt;wodbig.com &lt;/td&gt;
+          &lt;td&gt; 
             &lt;div class="flex items-center justify-end gap-[2px]"&gt;
               &lt;i class="fa-solid fa-star text-warning"&gt;&lt;/i&gt;
               &lt;i class="fa-solid fa-star text-warning"&gt;&lt;/i&gt;
