--- a/assets/pug/components/general-menu.pug
+++ b/assets/pug/components/general-menu.pug
@@ -7,7 +7,7 @@ div(class="grid grid-cols-12 gap-2")
             li(class="p-2 transition-all duration-300 rounded-5 hover:bg-gray-light dark:hover:bg-sidebar-dark2")
                a(href=`../template/${dashboard.url}`).flex.items-center.gap-2 
                   div(class=`p-2 rounded-5  border border-primary`)
-                     +SVG_ICON(`../template/${dashboard.icon}`,"w-5 h-5 stroke-primary")
+                     +SVG_ICON(`${dashboard.icon}`,"w-5 h-5 stroke-primary")
                   div
                      h4(class="text-xs font-semibold capitalize text-title line-clamp-1")= dashboard.title
                      span(class="text-xs font-medium text-content line-clamp-1")= dashboard.subTitle
