--- a/assets/pug/data/list-type.pug
+++ b/assets/pug/data/list-type.pug
@@ -235,7 +235,7 @@
                     },
                     {
                         icon:"Work",
-                        title:"The post nmae was suspended",
+                        title:"The post name was suspended",
                         badge:"View",  
                     },
                 ],
