--- a/assets/pug/pages/template/collapse.pug
+++ b/assets/pug/pages/template/collapse.pug
@@ -98,7 +98,7 @@ html(lang='en')
                             div(class="dark:bg-sidebar-dark2").accordionItemContent
                               p In essence, Tailwind CSS is a utility-first CSS framework for quickly creating unique user experiences. It is a low-level CSS framework that is extremely adaptable and provides all the building blocks required to create custom designs without requiring you to struggle to overcome obnoxious opinionated styles.
                           div.accordionItem.close
-                            h4.accordionItemHeading.bg-primary Why Tailwind CSS?
+                            h4.accordionItemHeading.bg-warning Why Tailwind CSS?
                             div(class="dark:bg-sidebar-dark2").accordionItemContent
                               p.flex.gap-2.items-center 
                                 +SVG_ICON("Arrow-Right", "min-w-[16px] w-4 h-4 !stroke-title")
@@ -107,7 +107,7 @@ html(lang='en')
                                 +SVG_ICON("Arrow-Right", "min-w-[16px] w-4 h-4 !stroke-title")
                                 |  Because it is a utility-first CSS framework, we may create custom designs using utility classes rather than writing CSS as in the conventional method. 
                           div.accordionItem.close
-                            h4.accordionItemHeading.bg-primary Advantages of Tailwind CSS
+                            h4.accordionItemHeading.bg-success Advantages of Tailwind CSS
                             div(class="dark:bg-sidebar-dark2").accordionItemContent 
                               p.flex.gap-2.items-center 
                                 +SVG_ICON("Arrow-Right", "min-w-[16px] w-4 h-4 !stroke-title")
@@ -135,7 +135,7 @@ html(lang='en')
                           |        &lt;/div&gt;
                           |     &lt;/div&gt;
                           |     &lt;div class="accordionItem close"&gt;
-                          |        &lt;h4 class="accordionItemHeading bg-primary"&gt; Why Tailwind CSS? &lt;/h4&gt;
+                          |        &lt;h4 class="accordionItemHeading bg-warning"&gt; Why Tailwind CSS? &lt;/h4&gt;
                           |        &lt;div class="accordionItemContent dark:bg-sidebar-dark2"&gt;
                           |           &lt;p class="text-xs text-content3"&gt; 
                           |               +SVG_ICON("Arrow-Right", "min-w-[16px] w-4 h-4 !stroke-title")
@@ -148,7 +148,7 @@ html(lang='en')
                           |        &lt;/div&gt;
                           |     &lt;/div&gt;
                           |     &lt;div class="accordionItem close"&gt;
-                          |        &lt;h4 class="accordionItemHeading bg-primary"&gt;Advantages of Tailwind CSS&lt;/h4&gt;
+                          |        &lt;h4 class="accordionItemHeading bg-success"&gt;Advantages of Tailwind CSS&lt;/h4&gt;
                           |        &lt;div class="accordionItemContent dark:bg-sidebar-dark2"&gt;
                           |           &lt;p class="text-xs text-content3"&gt; 
                           |               +SVG_ICON("Arrow-Right", "min-w-[16px] w-4 h-4 !stroke-title")
@@ -312,7 +312,7 @@ html(lang='en')
                       div.flex.flex-col.flex-wrap.gap-2
                         div.accordionWrapper
                           div.accordionItem.close
-                            h4.accordionItemHeading.bg-secondary User interface design: what is it?
+                            h4.accordionItemHeading.bg-primary User interface design: what is it?
                             div(class="dark:bg-sidebar-dark2").accordionItemContent
                               p The technique that designers use to create user interfaces in software or computerized devices with a focus on aesthetics or style is known as user interface (UI) design. Designers strive to produce user-friendly and enjoyable interfaces. Graphical user interfaces and other types, such as voice-controlled interfaces, are referred to as "UI design."
                           div.accordionItem.open
@@ -327,7 +327,7 @@ html(lang='en')
                           |&lt;div class="flex flex-col flex-wrap gap-2"&gt;
                           |    &lt;div class="accordionWrapper"&gt;
                           |     &lt;div class="accordionItem close"&gt;
-                          |        &lt;h4 class="accordionItemHeading bg-secondary"&gt;User interface design: what is it? &lt;/h4&gt;
+                          |        &lt;h4 class="accordionItemHeading bg-primary"&gt;User interface design: what is it? &lt;/h4&gt;
                           |        &lt;div class="accordionItemContent dark:bg-sidebar-dark2"&gt;
                           |          &lt;p&gt;  The technique that designers... &lt;/p&gt;
                           |        &lt;/div&gt;
@@ -357,13 +357,13 @@ html(lang='en')
                       div.flex.flex-col.flex-wrap.gap-2
                         div.accordionWrapper
                           div.accordionItem.close
-                            h4.accordionItemHeading.flex.justify-between.bg-primary Maintain Contact
+                            h4.accordionItemHeading.flex.justify-between.bg-warning Maintain Contact
                               div.collapse-icon
                                 +SVG_ICON("Arrow-Down-2","w-[1.25rem] h-[1.25rem] stroke-white")
                             div(class="dark:bg-sidebar-dark2").accordionItemContent
                               p These systems are primarily used to block access to content that has been identified as being inappropriate for users under a certain age (either voluntarily or in accordance with local laws), such as alcohol and tobacco advertising, internet pornography or other adult-oriented content, objectionable video games, or to comply with online privacy laws that govern the gathering of personal information from minors.
                           div.accordionItem.open
-                            h4.accordionItemHeading.flex.justify-between.bg-primary Talks to Others
+                            h4.accordionItemHeading.flex.justify-between.bg-success Talks to Others
                               div.collapse-icon
                                 +SVG_ICON("Arrow-Down-2","w-[1.25rem] h-[1.25rem] stroke-white")
                             div(class="dark:bg-sidebar-dark2").accordionItemContent
@@ -379,7 +379,7 @@ html(lang='en')
                           |&lt;div class="flex flex-col flex-wrap gap-2"&gt;
                           |    &lt;div class="accordionWrapper"&gt;
                           |     &lt;div class="accordionItem close"&gt;
-                          |        &lt;h4 class="flex justify-between accordionItemHeading bg-primary"&gt; Maintain Contact &lt;/h4&gt;
+                          |        &lt;h4 class="flex justify-between accordionItemHeading bg-warning"&gt; Maintain Contact &lt;/h4&gt;
                           |          &lt;div class="collapse-icon"&gt;
                           |            +SVG_ICON("Arrow-Down-2","w-[1.25rem] h-[1.25rem] stroke-white")
                           |          &lt;/div&gt;
@@ -388,7 +388,7 @@ html(lang='en')
                           |        &lt;/div&gt;
                           |     &lt;/div&gt;
                           |     &lt;div class="accordionItem open"&gt;
-                          |        &lt;h4 class="accordionItemHeading bg-primary"&gt; Talks to Others &lt;/h4&gt;
+                          |        &lt;h4 class="accordionItemHeading bg-success"&gt; Talks to Others &lt;/h4&gt;
                           |          &lt;div class="collapse-icon"&gt;
                           |            +SVG_ICON("Arrow-Down-2","w-[1.25rem] h-[1.25rem] stroke-white")
                           |          &lt;/div&gt;
@@ -537,7 +537,7 @@ html(lang='en')
                       div.flex.flex-col.flex-wrap.gap-2
                         div.accordionWrapper
                           div.accordionItem.open
-                            h4.accordionItemHeading.flex.justify-between.bg-secondary How should my profile be set up?
+                            h4.accordionItemHeading.flex.justify-between.bg-warning How should my profile be set up?
                               div.collapse-icon
                                 +SVG_ICON("Swap","w-[1.25rem] h-[1.25rem] stroke-white")
                             div(class="dark:bg-sidebar-dark2").accordionItemContent
@@ -549,7 +549,7 @@ html(lang='en')
                             div(class="dark:bg-sidebar-dark2").accordionItemContent
                               p Your bill will renew based on the date you upgraded to a premium plan if you initially signed up for a free account with Slicktext and later switched to one. In your SlickText account, under Plan Options, you may examine all of your bills.
                           div.accordionItem.close 
-                            h4.accordionItemHeading.flex.justify-between.bg-secondary How do I change my voice settings? 
+                            h4.accordionItemHeading.flex.justify-between.bg-success How do I change my voice settings? 
                               div.collapse-icon  
                                 +SVG_ICON("Arrow-Down-2","w-[1.25rem] h-[1.25rem] stroke-white")
                             div(class="dark:bg-sidebar-dark2").accordionItemContent
@@ -562,7 +562,7 @@ html(lang='en')
                           |&lt;div class="flex flex-col flex-wrap gap-2"&gt;
                           |    &lt;div class="accordionWrapper"&gt; 
                           |     &lt;div class="accordionItem open"&gt; 
-                          |        &lt;h4 class="flex justify-between accordionItemHeading bg-secondary"&gt; How should my profile be set up? &lt;/h4&gt;
+                          |        &lt;h4 class="flex justify-between accordionItemHeading bg-warning"&gt; How should my profile be set up? &lt;/h4&gt;
                           |          &lt;div class="collapse-icon"&gt;
                           |            +SVG_ICON("Swap","w-[1.25rem] h-[1.25rem] stroke-white")
                           |          &lt;/div&gt;
@@ -580,7 +580,7 @@ html(lang='en')
                           |        &lt;/div&gt;
                           |     &lt;/div&gt;
                           |     &lt;div class="accordionItem close"&gt;
-                          |        &lt;h4 class="flex justify-between accordionItemHeading bg-secondary"&gt; How do I change my voice settings?  &lt;/h4&gt;
+                          |        &lt;h4 class="flex justify-between accordionItemHeading bg-success"&gt; How do I change my voice settings?  &lt;/h4&gt;
                           |          &lt;div&gt;
                           |            +SVG_ICON("Arrow-Down-2","w-[1.25rem] h-[1.25rem] stroke-white")
                           |          &lt;/div class="collapse-icon"&gt;
