--- a/assets/pug/pages/template/modal.pug
+++ b/assets/pug/pages/template/modal.pug
@@ -208,9 +208,9 @@ html(lang='en')
                   div.tabs-content
                     div(data-tabContent="1" class="tab-pan active show first:rounded-tl-none rounded-5")
                       div.flex.flex-wrap.gap-2
-                        label.button-label.btn-primary(for='modal-10') Top Left Modal
+                        label.button-label.btn-secondary(for='modal-10') Top Left Modal
                         label.button-label.btn-warning(for='modal-11') Top Center Modal
-                        label.button-label.btn-secondary(for='modal-14') Top Right Modal
+                        label.button-label.btn-success(for='modal-14') Top Right Modal
 
                     div(data-tabContent="2" class="relative tab-pan copyParent group first:rounded-tl-none rounded-6")
                       button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white") 
@@ -219,9 +219,9 @@ html(lang='en')
                         code(class="dark:bg-sidebar-dark2")
                           |&lt;!-- The button to open modal --&gt;
                           |    &lt;div class="flex flex-col flex-wrap gap-2"&gt;
-                          |        &lt;label class="button-label btn-primary" for="modal-10"&gt;Top Left Modal&lt;/label&gt;
+                          |        &lt;label class="button-label btn-secondary" for="modal-10"&gt;Top Left Modal&lt;/label&gt;
                           |        &lt;label class="button-label btn-warning" for="modal-11"&gt;Top Center Modal&lt;/label&gt;
-                          |        &lt;label class="button-label btn-warning" for="modal-14"&gt;Top Right Modal&lt;/label&gt;
+                          |        &lt;label class="button-label btn-success" for="modal-14"&gt;Top Right Modal&lt;/label&gt;
                           |    &lt;/div&gt;                        
                           |
                           |&lt;!-- Put this part before &lt;/body&gt; tag for top left position modal --&gt;
@@ -312,7 +312,7 @@ html(lang='en')
                       div.flex.flex-wrap.gap-2
                         label.button-label.btn-info(for='modal-12') Bottom Left Modal
                         label.button-label.btn-success(for='modal-13') Bottom Center Modal
-                        label.button-label.btn-danger(for='modal-15') Bottom Right Modal
+                        label.button-label.btn-warning(for='modal-15') Bottom Right Modal
 
                     div(data-tabContent="2" class="relative tab-pan copyParent group first:rounded-tl-none rounded-6")
                       button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white") 
@@ -389,8 +389,7 @@ html(lang='en')
                   div.tabs-content
                     div(data-tabContent="1" class="tab-pan active show first:rounded-tl-none rounded-5")
                       div.flex.flex-wrap.gap-2
-                        label.button-label.btn-primary(for='modal-6') Centered Modal
-
+                        label.button-label.btn-success(for='modal-6') Centered Modal
                     div(data-tabContent="2" class="relative tab-pan copyParent group first:rounded-tl-none rounded-6")
                       button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white") 
                         i(data-feather="clipboard")
@@ -398,7 +397,7 @@ html(lang='en')
                         code(class="dark:bg-sidebar-dark2")
                           |&lt;!-- The button to open modal --&gt;
                           |     &lt;div class="flex flex-col flex-wrap gap-2"&gt;
-                          |         &lt;label class="button-label btn-primary" for="modal-6"&gt;Centered Modal&lt;/label&gt;
+                          |         &lt;label class="button-label btn-success" for="modal-6"&gt;Centered Modal&lt;/label&gt;
                           |     &lt;/div&gt;                        
                           |
                           |&lt;!-- Put this part before &lt;/body&gt; tag for centered modal --&gt;
@@ -430,7 +429,7 @@ html(lang='en')
                   div.tabs-content
                     div(data-tabContent="1" class="tab-pan active show first:rounded-tl-none rounded-5")
                       div.flex.flex-col.flex-wrap.gap-2
-                        label.button-label.btn-danger(for='modal-5') Footer Modal
+                        label.button-label.btn-secondary(for='modal-5') Footer Modal
                     div(data-tabContent="2" class="relative tab-pan copyParent group first:rounded-tl-none rounded-5")
                       button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white") 
                         i(data-feather="clipboard")
@@ -438,7 +437,7 @@ html(lang='en')
                         code(class="dark:bg-sidebar-dark2")
                           |&lt;!-- The button to open modal --&gt;
                           |    &lt;div class="flex flex-col flex-wrap gap-2"&gt;
-                          |        &lt;label class="button-label btn-danger" for="modal-5"&gt;Footer Modal&lt;/label&gt;
+                          |        &lt;label class="button-label btn-secondary" for="modal-5"&gt;Footer Modal&lt;/label&gt;
                           |    &lt;/div&gt;
                           |
                           |&lt;!-- Put this part before &lt;/body&gt; tag for footer modal--&gt;
@@ -597,7 +596,7 @@ html(lang='en')
                   div.tabs-content
                     div(data-tabContent="1" class="tab-pan active show first:rounded-tl-none rounded-5")
                       div.flex.flex-wrap.gap-2
-                        label.button-label.btn-danger(for='modal-9') Tooltip & Popover
+                        label.button-label.btn-success(for='modal-9') Tooltip & Popover
                     div(data-tabContent="2" class="relative tab-pan copyParent group first:rounded-tl-none rounded-5")
                       button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white") 
                         i(data-feather="clipboard")
@@ -605,7 +604,7 @@ html(lang='en')
                         code(class="dark:bg-sidebar-dark2")
                           |&lt;!-- The button to open modal for tooltips & popover modal--&gt;
                           |   &lt;div class="flex flex-col flex-wrap gap-2"&gt;
-                          |      &lt;label class="button-label btn-danger" for="modal-9"&gt;Modal&lt;/label&gt;
+                          |      &lt;label class="button-label btn-success" for="modal-9"&gt;Modal&lt;/label&gt;
                           |   &lt;/div&gt;
                           |
                           |&lt;!-- Put this part before &lt;/body&gt; tag --&gt;
@@ -620,7 +619,7 @@ html(lang='en')
                           |           &lt;div class="modal-body"&gt;
                           |               &lt;p&gt;Content for the modal&lt;/p&gt;
                           |           &lt;/div&gt;
-                          |       &lt;/div&gt;
+                          |       &lt;/div&gt; 
                           |   &lt;/div&gt;
         // Page Body End 
         +footer("sm:flex-col flex sm:gap-1 gap-2 items-center justify-between py-[1.1875rem] shadow-footer bg-white px-body-space mt-card-gap")
@@ -640,7 +639,7 @@ html(lang='en')
               span.text-xl.text-secondary 85% OFF
               |  , Hurry Up Online Shopping
             div.modal-img
-              img(class="" src="../../assets/images/modal/online-shopping.gif" alt="shopping" class="w-52")
+              img(class="" src="../../assets/images/modal/online-shopping.gif" alt="shopping" class="w-40")
             label(for="modal-1").bg-primary.text-white.py-1.px-2.rounded.text-end.inline-block
               a(href="shop.html") Explore More
       //- Small size modal
@@ -720,8 +719,8 @@ html(lang='en')
               i(data-feather="x" class="w-4 h-4 stroke-dark")
           div.modal-body
             p This website uses cookies to ensure you get the best experience on our website.
-            div.modal-img
-              img(class="" src="../../assets/images/modal/cookies-sendcookie.gif" alt="whatsapp" class="w-52")               
+            div.modal-img 
+              img(class="" src="../../assets/images/modal/cookies-sendcookie.gif" alt="Cookies" class="w-40")               
           div.modal-footer
             label(for="modal-5").btn.btn-primary.p-2.text-white.inline-block Accept
 
@@ -811,14 +810,18 @@ html(lang='en')
         label.modal-overlay(class="peer-checked:block" for='modal-9')
         div.modal(class="w-[18.75rem] peer-checked:opacity-100 peer-checked:visible dark:bg-sidebar-dark2")
           div.modal-header
-            h3 Modal Title
-            label(for='modal-9') 
+            h3 Tooltip and popover modal
+            label(for='modal-9')
               i(data-feather="x" class="w-4 h-4 stroke-dark")
           div.modal-body
             p.leading- Here, you can see that inside the
               label.button-label.btn-secondary.text-sm.py-1.px-2(data-tw-tooltip="Tooltip") popover
-              |   modal, you can set the tooltip.
-
+              |   modal, 
+              a(href="javascript:void(0)" class="font-semibold text-secondary" data-tw-tooltip="link") This link  
+              |  and that link have tooltips on hover.
+            //- p.leading- Tooltip 
+            //-   a(href="javascript:void(0)" class="font-semibold text-secondary" data-tw-tooltip="link") This link  
+            //-   |  and that link have tooltips on hover.
       //- Top-left modal
       div.modal-main
         input#modal-10(class="peer" name="modal-10" type='checkbox')
