--- a/html/template/collapse.html
+++ b/html/template/collapse.html
@@ -393,7 +393,7 @@
                     </div>
                     <!-- Language End -->
                   </li>
-                  <li class="cursor-pointer flex- pl-[11px] rtl:pr-[11px] rtl:pl-unset rtl:first:pr-0 first:pl-0 flex items-center">
+                  <li class="cursor-pointer flex- pl-[11px] language-border rtl:first:pr-0 first:pl-0 flex items-center">
                     <!-- Profile Start -->
                     <div class="dropdown"> 
                       <div class="flex items-center gap-[10px] cursor-pointer"> 
@@ -448,7 +448,7 @@
                             <li class="p-2 transition-all duration-300 rounded-5 hover:bg-gray-light dark:hover:bg-sidebar-dark2"><a class="flex items-center gap-2" href="../template/index.html"> 
                                 <div class="p-2 rounded-5  border border-primary">
                                   <svg class="w-5 h-5 stroke-primary"> 
-                                    <use href="../../assets/svg/sprite.svg#../template/Home"> </use>
+                                    <use href="../../assets/svg/sprite.svg#Home"> </use>
                                   </svg>
                                 </div>
                                 <div>
@@ -457,7 +457,7 @@
                             <li class="p-2 transition-all duration-300 rounded-5 hover:bg-gray-light dark:hover:bg-sidebar-dark2"><a class="flex items-center gap-2" href="../template/ecommerce.html"> 
                                 <div class="p-2 rounded-5  border border-primary">
                                   <svg class="w-5 h-5 stroke-primary"> 
-                                    <use href="../../assets/svg/sprite.svg#../template/Home"> </use>
+                                    <use href="../../assets/svg/sprite.svg#Bag"> </use>
                                   </svg>
                                 </div>
                                 <div>
@@ -1089,7 +1089,7 @@
                             </div>
                           </div>
                           <div class="accordionItem close">
-                            <h4 class="accordionItemHeading bg-primary">Why Tailwind CSS?</h4>
+                            <h4 class="accordionItemHeading bg-warning">Why Tailwind CSS?</h4>
                             <div class="dark:bg-sidebar-dark2 accordionItemContent">
                               <p class="flex gap-2 items-center"> 
                                 <svg class="min-w-[16px] w-4 h-4 !stroke-title"> 
@@ -1104,7 +1104,7 @@
                             </div>
                           </div>
                           <div class="accordionItem close">
-                            <h4 class="accordionItemHeading bg-primary">Advantages of Tailwind CSS</h4>
+                            <h4 class="accordionItemHeading bg-success">Advantages of Tailwind CSS</h4>
                             <div class="dark:bg-sidebar-dark2 accordionItemContent"> 
                               <p class="flex gap-2 items-center"> 
                                 <svg class="min-w-[16px] w-4 h-4 !stroke-title"> 
@@ -1142,7 +1142,7 @@
        &lt;/div&gt;
     &lt;/div&gt;
     &lt;div class="accordionItem close"&gt;
-       &lt;h4 class="accordionItemHeading bg-primary"&gt; Why Tailwind CSS? &lt;/h4&gt;
+       &lt;h4 class="accordionItemHeading bg-warning"&gt; Why Tailwind CSS? &lt;/h4&gt;
        &lt;div class="accordionItemContent dark:bg-sidebar-dark2"&gt;
           &lt;p class="text-xs text-content3"&gt; 
               +SVG_ICON("Arrow-Right", "min-w-[16px] w-4 h-4 !stroke-title")
@@ -1155,7 +1155,7 @@
        &lt;/div&gt;
     &lt;/div&gt;
     &lt;div class="accordionItem close"&gt;
-       &lt;h4 class="accordionItemHeading bg-primary"&gt;Advantages of Tailwind CSS&lt;/h4&gt;
+       &lt;h4 class="accordionItemHeading bg-success"&gt;Advantages of Tailwind CSS&lt;/h4&gt;
        &lt;div class="accordionItemContent dark:bg-sidebar-dark2"&gt;
           &lt;p class="text-xs text-content3"&gt; 
               +SVG_ICON("Arrow-Right", "min-w-[16px] w-4 h-4 !stroke-title")
@@ -1361,7 +1361,7 @@
                       <div class="flex flex-col flex-wrap gap-2">
                         <div class="accordionWrapper">
                           <div class="accordionItem close">
-                            <h4 class="accordionItemHeading bg-secondary">User interface design: what is it?</h4>
+                            <h4 class="accordionItemHeading bg-primary">User interface design: what is it?</h4>
                             <div class="dark:bg-sidebar-dark2 accordionItemContent">
                               <p>The technique that designers use to create user interfaces in software or computerized devices with a focus on aesthetics or style is known as user interface (UI) design. Designers strive to produce user-friendly and enjoyable interfaces. Graphical user interfaces and other types, such as voice-controlled interfaces, are referred to as "UI design."</p>
                             </div>
@@ -1380,7 +1380,7 @@
                       <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="flex flex-col flex-wrap gap-2"&gt;
    &lt;div class="accordionWrapper"&gt;
     &lt;div class="accordionItem close"&gt;
-       &lt;h4 class="accordionItemHeading bg-secondary"&gt;User interface design: what is it? &lt;/h4&gt;
+       &lt;h4 class="accordionItemHeading bg-primary"&gt;User interface design: what is it? &lt;/h4&gt;
        &lt;div class="accordionItemContent dark:bg-sidebar-dark2"&gt;
          &lt;p&gt;  The technique that designers... &lt;/p&gt;
        &lt;/div&gt;
@@ -1416,7 +1416,7 @@
                       <div class="flex flex-col flex-wrap gap-2">
                         <div class="accordionWrapper">
                           <div class="accordionItem close">
-                            <h4 class="accordionItemHeading flex justify-between bg-primary">Maintain Contact
+                            <h4 class="accordionItemHeading flex justify-between bg-warning">Maintain Contact
                               <div class="collapse-icon">
                                 <svg class="w-[1.25rem] h-[1.25rem] stroke-white"> 
                                   <use href="../../assets/svg/sprite.svg#Arrow-Down-2"> </use>
@@ -1428,7 +1428,7 @@
                             </div>
                           </div>
                           <div class="accordionItem open">
-                            <h4 class="accordionItemHeading flex justify-between bg-primary">Talks to Others
+                            <h4 class="accordionItemHeading flex justify-between bg-success">Talks to Others
                               <div class="collapse-icon">
                                 <svg class="w-[1.25rem] h-[1.25rem] stroke-white"> 
                                   <use href="../../assets/svg/sprite.svg#Arrow-Down-2"> </use>
@@ -1448,7 +1448,7 @@
                       <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="flex flex-col flex-wrap gap-2"&gt;
    &lt;div class="accordionWrapper"&gt;
     &lt;div class="accordionItem close"&gt;
-       &lt;h4 class="flex justify-between accordionItemHeading bg-primary"&gt; Maintain Contact &lt;/h4&gt;
+       &lt;h4 class="flex justify-between accordionItemHeading bg-warning"&gt; Maintain Contact &lt;/h4&gt;
          &lt;div class="collapse-icon"&gt;
            +SVG_ICON("Arrow-Down-2","w-[1.25rem] h-[1.25rem] stroke-white")
          &lt;/div&gt;
@@ -1457,7 +1457,7 @@
        &lt;/div&gt;
     &lt;/div&gt;
     &lt;div class="accordionItem open"&gt;
-       &lt;h4 class="accordionItemHeading bg-primary"&gt; Talks to Others &lt;/h4&gt;
+       &lt;h4 class="accordionItemHeading bg-success"&gt; Talks to Others &lt;/h4&gt;
          &lt;div class="collapse-icon"&gt;
            +SVG_ICON("Arrow-Down-2","w-[1.25rem] h-[1.25rem] stroke-white")
          &lt;/div&gt;
@@ -1647,7 +1647,7 @@
                       <div class="flex flex-col flex-wrap gap-2">
                         <div class="accordionWrapper">
                           <div class="accordionItem open">
-                            <h4 class="accordionItemHeading flex justify-between bg-secondary">How should my profile be set up?
+                            <h4 class="accordionItemHeading flex justify-between bg-warning">How should my profile be set up?
                               <div class="collapse-icon">
                                 <svg class="w-[1.25rem] h-[1.25rem] stroke-white"> 
                                   <use href="../../assets/svg/sprite.svg#Swap"> </use>
@@ -1671,7 +1671,7 @@
                             </div>
                           </div>
                           <div class="accordionItem close"> 
-                            <h4 class="accordionItemHeading flex justify-between bg-secondary">How do I change my voice settings? 
+                            <h4 class="accordionItemHeading flex justify-between bg-success">How do I change my voice settings? 
                               <div class="collapse-icon"> 
                                 <svg class="w-[1.25rem] h-[1.25rem] stroke-white"> 
                                   <use href="../../assets/svg/sprite.svg#Arrow-Down-2"> </use>
@@ -1690,7 +1690,7 @@
                       <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="flex flex-col flex-wrap gap-2"&gt;
    &lt;div class="accordionWrapper"&gt; 
     &lt;div class="accordionItem open"&gt; 
-       &lt;h4 class="flex justify-between accordionItemHeading bg-secondary"&gt; How should my profile be set up? &lt;/h4&gt;
+       &lt;h4 class="flex justify-between accordionItemHeading bg-warning"&gt; How should my profile be set up? &lt;/h4&gt;
          &lt;div class="collapse-icon"&gt;
            +SVG_ICON("Swap","w-[1.25rem] h-[1.25rem] stroke-white")
          &lt;/div&gt;
@@ -1708,7 +1708,7 @@
        &lt;/div&gt;
     &lt;/div&gt;
     &lt;div class="accordionItem close"&gt;
-       &lt;h4 class="flex justify-between accordionItemHeading bg-secondary"&gt; How do I change my voice settings?  &lt;/h4&gt;
+       &lt;h4 class="flex justify-between accordionItemHeading bg-success"&gt; How do I change my voice settings?  &lt;/h4&gt;
          &lt;div&gt;
            +SVG_ICON("Arrow-Down-2","w-[1.25rem] h-[1.25rem] stroke-white")
          &lt;/div class="collapse-icon"&gt;
