--- a/html/template/ecommerce.html
+++ b/html/template/ecommerce.html
@@ -391,7 +391,7 @@
                     </div>
                     <!-- Language End -->
                   </li>
-                  <li class="cursor-pointer flex- pl-[11px] rtl:pr-[11px] rtl:pl-unset rtl:first:pr-0 first:pl-0 flex items-center">
+                  <li class="cursor-pointer flex- pl-[11px] language-border rtl:first:pr-0 first:pl-0 flex items-center">
                     <!-- Profile Start -->
                     <div class="dropdown"> 
                       <div class="flex items-center gap-[10px] cursor-pointer"> 
@@ -446,7 +446,7 @@
                             <li class="p-2 transition-all duration-300 rounded-5 hover:bg-gray-light dark:hover:bg-sidebar-dark2"><a class="flex items-center gap-2" href="../template/index.html"> 
                                 <div class="p-2 rounded-5  border border-primary">
                                   <svg class="w-5 h-5 stroke-primary"> 
-                                    <use href="../../assets/svg/sprite.svg#../template/Home"> </use>
+                                    <use href="../../assets/svg/sprite.svg#Home"> </use>
                                   </svg>
                                 </div>
                                 <div>
@@ -455,7 +455,7 @@
                             <li class="p-2 transition-all duration-300 rounded-5 hover:bg-gray-light dark:hover:bg-sidebar-dark2"><a class="flex items-center gap-2" href="../template/ecommerce.html"> 
                                 <div class="p-2 rounded-5  border border-primary">
                                   <svg class="w-5 h-5 stroke-primary"> 
-                                    <use href="../../assets/svg/sprite.svg#../template/Home"> </use>
+                                    <use href="../../assets/svg/sprite.svg#Bag"> </use>
                                   </svg>
                                 </div>
                                 <div>
@@ -1233,7 +1233,7 @@
                   </div>
                 </div>
                 <div class="card-body">
-                  <div class="overflow-auto custom-scroll"> 
+                  <div class="overflow-auto custom-scroll">
                     <table class="table"> 
                       <thead> 
                         <tr> 
@@ -1261,10 +1261,10 @@
                           <td class="min-w-[120px]">
                             <h4 class="text-xs font-semibold text-title">Nike Tshirt</h4>
                           </td>
-                          <td class="min-w-[75px] 4xl:min-w-[120px]">
+                          <td class="min-w-[140px] 4xl:min-w-[120px]">
                             <h4 class="text-xs font-semibold text-title">Jan 25, 2023</h4>
                           </td>
-                          <td class="min-w-[140px]"> 
+                          <td class="min-w-[120px]"> 
                             <h4 class="text-xs font-semibold text-title">$12,30</h4>
                           </td>
                           <td class="min-w-[140px]"> 
@@ -1309,10 +1309,10 @@
                           <td class="min-w-[120px]">
                             <h4 class="text-xs font-semibold text-title">Adidas Hat</h4>
                           </td>
-                          <td class="min-w-[75px] 4xl:min-w-[120px]">
+                          <td class="min-w-[140px] 4xl:min-w-[120px]">
                             <h4 class="text-xs font-semibold text-title">Jan 12, 2023</h4>
                           </td>
-                          <td class="min-w-[140px]"> 
+                          <td class="min-w-[120px]"> 
                             <h4 class="text-xs font-semibold text-title">$10,40</h4>
                           </td>
                           <td class="min-w-[140px]"> 
@@ -1357,10 +1357,10 @@
                           <td class="min-w-[120px]">
                             <h4 class="text-xs font-semibold text-title">Puma Bag</h4>
                           </td>
-                          <td class="min-w-[75px] 4xl:min-w-[120px]">
+                          <td class="min-w-[140px] 4xl:min-w-[120px]">
                             <h4 class="text-xs font-semibold text-title">Jan 05, 2023</h4>
                           </td>
-                          <td class="min-w-[140px]"> 
+                          <td class="min-w-[120px]"> 
                             <h4 class="text-xs font-semibold text-title">$11,23</h4>
                           </td>
                           <td class="min-w-[140px]"> 
@@ -1405,10 +1405,10 @@
                           <td class="min-w-[120px]">
                             <h4 class="text-xs font-semibold text-title">Nike Glove</h4>
                           </td>
-                          <td class="min-w-[75px] 4xl:min-w-[120px]">
+                          <td class="min-w-[140px] 4xl:min-w-[120px]">
                             <h4 class="text-xs font-semibold text-title">Jan 01, 2023</h4>
                           </td>
-                          <td class="min-w-[140px]"> 
+                          <td class="min-w-[120px]"> 
                             <h4 class="text-xs font-semibold text-title">$19,10</h4>
                           </td>
                           <td class="min-w-[140px]"> 
