--- a/html/template/index.html
+++ b/html/template/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"> 
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -391,7 +391,7 @@
                     </div>
                     <!-- Language End -->
                   </li>
-                  <li class="cursor-pointer flex- pl-[11px] rtl:pr-[11px] rtl:pl-unset rtl:first:pr-0 first:pl-0 flex items-center">
+                  <li class="cursor-pointer flex- pl-[11px] language-border rtl:first:pr-0 first:pl-0 flex items-center">
                     <!-- Profile Start -->
                     <div class="dropdown"> 
                       <div class="flex items-center gap-[10px] cursor-pointer"> 
@@ -446,7 +446,7 @@
                             <li class="p-2 transition-all duration-300 rounded-5 hover:bg-gray-light dark:hover:bg-sidebar-dark2"><a class="flex items-center gap-2" href="../template/index.html"> 
                                 <div class="p-2 rounded-5  border border-primary">
                                   <svg class="w-5 h-5 stroke-primary"> 
-                                    <use href="../../assets/svg/sprite.svg#../template/Home"> </use>
+                                    <use href="../../assets/svg/sprite.svg#Home"> </use>
                                   </svg>
                                 </div>
                                 <div>
@@ -455,7 +455,7 @@
                             <li class="p-2 transition-all duration-300 rounded-5 hover:bg-gray-light dark:hover:bg-sidebar-dark2"><a class="flex items-center gap-2" href="../template/ecommerce.html"> 
                                 <div class="p-2 rounded-5  border border-primary">
                                   <svg class="w-5 h-5 stroke-primary"> 
-                                    <use href="../../assets/svg/sprite.svg#../template/Home"> </use>
+                                    <use href="../../assets/svg/sprite.svg#Bag"> </use>
                                   </svg>
                                 </div>
                                 <div>
@@ -1016,9 +1016,9 @@
           </aside>
         </div>
         <!-- Sidebar End -->
-        <!-- Page Body Start-->
+        <!-- Page Body Start  -->
         <div class="page-body">
-          <div class="grid grid-cols-12 gap-card-gap">
+          <div class="grid grid-cols-12 gap-card-gap"> 
             <div class="col-span-3 ratio_109 4xl:col-span-4 lg:col-span-6 lg:-order-2 2md:col-span-12">
               <!-- Welcome Card -->
               <div class="card p-card-space before:!pt-0 bg-primary relative common-animate-main h-full gap-0 common-animate-main welcome-card-main"> 
@@ -1046,7 +1046,7 @@
               </div>
             </div>
             <div class="col-span-6 4xl:col-span-8 lg:col-span-12 lg:-order-1">
-              <div class="card">
+              <div class="card"> 
                 <div class="card-header transaction-history"> 
                   <div class="flex justify-between w-full flex-wrap gap-2 items-center">
                     <h3 class="text-lg font-bold text-title leading-none">Transaction History</h3>
@@ -1059,7 +1059,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="card-body"> 
+                <div class="card-body">
                   <div class="overflow-auto custom-scroll">
                     <table class="table"> 
                       <thead> 
