--- a/html/template/stack.html
+++ b/html/template/stack.html
@@ -393,7 +393,7 @@
                     </div>
                     <!-- Language End -->
                   </li>
-                  <li class="cursor-pointer flex- pl-[11px] rtl:pr-[11px] rtl:pl-unset rtl:first:pr-0 first:pl-0 flex items-center">
+                  <li class="cursor-pointer flex- pl-[11px] language-border rtl:first:pr-0 first:pl-0 flex items-center">
                     <!-- Profile Start -->
                     <div class="dropdown"> 
                       <div class="flex items-center gap-[10px] cursor-pointer"> 
@@ -448,7 +448,7 @@
                             <li class="p-2 transition-all duration-300 rounded-5 hover:bg-gray-light dark:hover:bg-sidebar-dark2"><a class="flex items-center gap-2" href="../template/index.html"> 
                                 <div class="p-2 rounded-5  border border-primary">
                                   <svg class="w-5 h-5 stroke-primary"> 
-                                    <use href="../../assets/svg/sprite.svg#../template/Home"> </use>
+                                    <use href="../../assets/svg/sprite.svg#Home"> </use>
                                   </svg>
                                 </div>
                                 <div>
@@ -457,7 +457,7 @@
                             <li class="p-2 transition-all duration-300 rounded-5 hover:bg-gray-light dark:hover:bg-sidebar-dark2"><a class="flex items-center gap-2" href="../template/ecommerce.html"> 
                                 <div class="p-2 rounded-5  border border-primary">
                                   <svg class="w-5 h-5 stroke-primary"> 
-                                    <use href="../../assets/svg/sprite.svg#../template/Home"> </use>
+                                    <use href="../../assets/svg/sprite.svg#Bag"> </use>
                                   </svg>
                                 </div>
                                 <div>
@@ -1188,13 +1188,13 @@
                     <div class="tab-pan active show first:rounded-tl-none rounded-5" data-tabContent="1">
                       <div class="flex flex-wrap gap-2 justify-center">
                         <div class="stack mb-3"> 
-                          <div class="stack-item card border border-gray bg-gray-light text-title shawod-none rounded-2xl place-content-center !w-40 dark:border-border-dark">
+                          <div class="stack-item card border border-gray bg-gray-light text-title shadow-none rounded-2xl place-content-center !w-40 dark:border-border-dark">
                             <div class="card-body">card-1</div>
                           </div>
-                          <div class="stack-item card border border-gray bg-gray-light text-title shawod-none rounded-2xl place-content-center !w-40 dark:border-border-dark">
+                          <div class="stack-item card border border-gray bg-gray-light text-title shadow-none rounded-2xl place-content-center !w-40 dark:border-border-dark">
                             <div class="card-body">card-2</div>
                           </div>
-                          <div class="stack-item card border border-gray bg-gray-light text-title shawod-none rounded-2xl place-content-center !w-40 dark:border-border-dark">
+                          <div class="stack-item card border border-gray bg-gray-light text-title shadow-none rounded-2xl place-content-center !w-40 dark:border-border-dark">
                             <div class="card-body">card-3</div>
                           </div>
                         </div>
@@ -1204,13 +1204,13 @@
                       <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white"> <i data-feather="clipboard"></i></button>
                       <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="flex flex-wrap justify-center gap-2"&gt;
    &lt;div class="mb-3 stack"&gt;
-       &lt;div class="stack-item card border border-gray bg-gray-light text-title shawod-none rounded-2xl place-content-center !w-40 dark:border-border-dark"&gt;
+       &lt;div class="stack-item card border border-gray bg-gray-light text-title shadow-none rounded-2xl place-content-center !w-40 dark:border-border-dark"&gt;
            &lt;div class="card-body"&gt; card-1 &lt;/div&gt;
        &lt;/div&gt;
-       &lt;div class="stack-item card border border-gray bg-gray-light text-title shawod-none rounded-2xl place-content-center !w-40 dark:border-border-dark"&gt;
+       &lt;div class="stack-item card border border-gray bg-gray-light text-title shadow-none rounded-2xl place-content-center !w-40 dark:border-border-dark"&gt;
            &lt;div class="card-body"&gt; card-2 &lt;/div&gt;
        &lt;/div&gt;
-       &lt;div class="stack-item card border border-gray bg-gray-light text-title shawod-none rounded-2xl place-content-center !w-40 dark:border-border-dark"&gt;
+       &lt;div class="stack-item card border border-gray bg-gray-light text-title shadow-none rounded-2xl place-content-center !w-40 dark:border-border-dark"&gt;
            &lt;div class="card-body"&gt; card-3 &lt;/div&gt;
        &lt;/div&gt;
    &lt;/div&gt; 
@@ -1304,19 +1304,19 @@
                     <div class="tab-pan active show first:rounded-tl-none rounded-5" data-tabContent="1">
                       <div class="flex flex-wrap gap-2 justify-center">
                         <div class="stack mb-3"> 
-                          <div class="stack-item card bg-danger text-white shawod-none rounded-2xl !w-auto !h-auto dark:bg-danger dark:border-border-dark">
+                          <div class="stack-item card bg-danger text-white shadow-none rounded-2xl !w-auto !h-auto dark:bg-danger dark:border-border-dark">
                             <div class="card-body"> 
                               <h3 class="card-title">Latest News</h3>
                               <p>Click here, for more latest update!!</p>
                             </div>
                           </div>
-                          <div class="stack-item card bg-danger text-white shawod-none rounded-2xl !w-auto !h-auto dark:bg-danger dark:border-border-dark">
+                          <div class="stack-item card bg-danger text-white shadow-none rounded-2xl !w-auto !h-auto dark:bg-danger dark:border-border-dark">
                             <div class="card-body"> 
                               <h3 class="card-title">Latest News</h3>
                               <p>Click here, for more latest update!!</p>
                             </div>
                           </div>
-                          <div class="stack-item card bg-danger text-white shawod-none rounded-2xl !w-auto !h-auto dark:bg-danger dark:border-border-dark">
+                          <div class="stack-item card bg-danger text-white shadow-none rounded-2xl !w-auto !h-auto dark:bg-danger dark:border-border-dark">
                             <div class="card-body"> 
                               <h3 class="card-title">Latest News</h3>
                               <p>Click here, for more latest update!!</p>
@@ -1329,19 +1329,19 @@
                       <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white"> <i data-feather="clipboard"></i></button>
                       <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="flex flex-wrap justify-center gap-2"&gt;
    &lt;div class="mb-3 stack"&gt;
-       &lt;div class="stack-item card bg-danger text-white shawod-none rounded-2xl !w-auto !h-auto dark:bg-sidebar-dark2 dark:border-border-dark"&gt;
+       &lt;div class="stack-item card bg-danger text-white shadow-none rounded-2xl !w-auto !h-auto dark:bg-sidebar-dark2 dark:border-border-dark"&gt;
            &lt;div class="card-body"&gt; 
                &lt;h3 class="card-title"&gt; Latest News &lt;/h3&gt;
                &lt;p&gt; Click here, for more latest update!! &lt;/p&gt;
            &lt;/div&gt;
        &lt;/div&gt;
-       &lt;div class="stack-item card bg-danger text-white shawod-none rounded-2xl !w-auto !h-auto dark:bg-sidebar-dark2 dark:border-border-dark"&gt;
+       &lt;div class="stack-item card bg-danger text-white shadow-none rounded-2xl !w-auto !h-auto dark:bg-sidebar-dark2 dark:border-border-dark"&gt;
            &lt;div class="card-body"&gt; 
                &lt;h3 class="card-title"&gt; Latest News &lt;/h3&gt;
                &lt;p&gt; Click here, for more latest update!! &lt;/p&gt;
            &lt;/div&gt;
        &lt;/div&gt;
-       &lt;div class="stack-item card bg-danger text-white shawod-none rounded-2xl !w-auto !h-auto dark:bg-sidebar-dark2 dark:border-border-dark"&gt;
+       &lt;div class="stack-item card bg-danger text-white shadow-none rounded-2xl !w-auto !h-auto dark:bg-sidebar-dark2 dark:border-border-dark"&gt;
            &lt;div class="card-body"&gt; 
                &lt;h3 class="card-title"&gt; Latest News &lt;/h3&gt;
                &lt;p&gt; Click here, for more latest update!! &lt;/p&gt;
@@ -1371,19 +1371,19 @@
                     <div class="tab-pan active show first:rounded-tl-none rounded-5" data-tabContent="1">
                       <div class="flex flex-wrap gap-2 justify-center">
                         <div class="stack mb-3"> 
-                          <div class="stack-item card bg-info text-white shawod-none rounded-2xl !w-auto !h-auto dark:bg-info">
+                          <div class="stack-item card bg-info text-white shadow-none rounded-2xl !w-auto !h-auto dark:bg-info">
                             <div class="card-body"> 
                               <h3 class="card-title">Notifications</h3>
                               <p>You have 4 unread messages. Tap to see</p>
                             </div>
                           </div>
-                          <div class="stack-item card bg-danger text-white shawod-none rounded-2xl !w-auto !h-auto dark:bg-danger">
+                          <div class="stack-item card bg-danger text-white shadow-none rounded-2xl !w-auto !h-auto dark:bg-danger">
                             <div class="card-body"> 
                               <h3 class="card-title">Notifications</h3>
                               <p>You have 4 unread messages. Tap to see</p>
                             </div>
                           </div>
-                          <div class="stack-item card bg-warning text-white shawod-none rounded-2xl !w-auto !h-auto dark:bg-warning">
+                          <div class="stack-item card bg-warning text-white shadow-none rounded-2xl !w-auto !h-auto dark:bg-warning">
                             <div class="card-body"> 
                               <h3 class="card-title">Notifications</h3>
                               <p>You have 4 unread messages. Tap to see</p>
@@ -1396,19 +1396,19 @@
                       <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white"> <i data-feather="clipboard"></i></button>
                       <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="flex flex-wrap justify-center gap-2"&gt;
    &lt;div class="mb-3 stack"&gt;
-       &lt;div class="stack-item card bg-info text-white shawod-none rounded-2xl !w-auto !h-auto dark:bg-info"&gt;
+       &lt;div class="stack-item card bg-info text-white shadow-none rounded-2xl !w-auto !h-auto dark:bg-info"&gt;
            &lt;div class="card-body"&gt; 
                &lt;h3 class="card-title"&gt; Notifications &lt;/h3&gt;
                &lt;p&gt; You have 4 unread messages. Tap to see &lt;/p&gt;
            &lt;/div&gt;
        &lt;/div&gt;
-       &lt;div class="stack-item card bg-danger text-white shawod-none rounded-2xl !w-auto !h-auto dark:bg-danger"&gt;
+       &lt;div class="stack-item card bg-danger text-white shadow-none rounded-2xl !w-auto !h-auto dark:bg-danger"&gt;
            &lt;div class="card-body"&gt; 
                &lt;h3 class="card-title"&gt; Notifications &lt;/h3&gt;
                &lt;p&gt; You have 4 unread messages. Tap to see &lt;/p&gt;
            &lt;/div&gt;
        &lt;/div&gt;
-       &lt;div class="stack-item card bg-warning text-white shawod-none rounded-2xl !w-auto !h-auto dark:dark:bg-warning"&gt;
+       &lt;div class="stack-item card bg-warning text-white shadow-none rounded-2xl !w-auto !h-auto dark:dark:bg-warning"&gt;
            &lt;div class="card-body"&gt; 
                &lt;h3 class="card-title"&gt; Notifications &lt;/h3&gt;
                &lt;p&gt; You have 4 unread messages. Tap to see &lt;/p&gt;
